v8a: barebox: bump version v2025.03.0 -> v2025.06.1
This version includes necessary changes for upcoming beagleplay support.
See for further information see migration guide at [1] and [2].

Bump the version number and run oldconfig with defaults

[1]: https://www.barebox.org/doc/latest/migration-guides/migration-2025.05.0.html
[2]: https://www.barebox.org/doc/latest/migration-guides/migration-2025.06.0.html

Signed-off-by: Lars Schmidt <l.schmidt@pengutronix.de>

--- a/configs/platform-v8a/barebox.config
+++ b/configs/platform-v8a/barebox.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Barebox/arm 2025.03.0 Configuration
+# Barebox/arm 2025.06.1 Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARCH_LINUX_NAME="arm64"
@@ -25,7 +25,6 @@ CONFIG_ARCH_ROCKCHIP=y
 #
 # Processor Type
 #
-CONFIG_PHYS_ADDR_T_64BIT=y
 CONFIG_CPU_64=y
 CONFIG_CPU_V8=y
 CONFIG_CPU_64v8=y
@@ -74,6 +73,7 @@ CONFIG_MACH_TQ_MBA8MPXL=y
 #
 # i.MX93 boards
 #
+# CONFIG_MACH_PHYTEC_PHYCORE_IMX93 is not set
 CONFIG_MACH_TQMA93XX=y
 # end of i.MX boards
 
@@ -131,10 +131,10 @@ CONFIG_ARM_EXCEPTIONS=y
 CONFIG_ARM_SMCCC=y
 CONFIG_ARM_PSCI_OF=y
 CONFIG_ARM_PSCI_CLIENT=y
+# CONFIG_ARM_BOOTM_ELF is not set
+# CONFIG_ARM_BOOTM_FIP is not set
 CONFIG_ARM_ATF=y
 # end of ARM specific settings
-
-CONFIG_HAVE_ARCH_BOARD_GENERIC_DT=y
 
 #
 # General architecture-dependent options
@@ -143,15 +143,22 @@ CONFIG_BOARD_GENERIC_DT=y
 # CONFIG_BOARD_GENERIC_FIT is not set
 # end of General architecture-dependent options
 
+CONFIG_ARCH_HAS_STACK_DUMP=y
+CONFIG_ARCH_HAS_DATA_ABORT_MASK=y
+CONFIG_ARCH_HAS_ZERO_PAGE=y
+CONFIG_HAVE_ARCH_BOARD_GENERIC_DT=y
+CONFIG_ARCH_HAS_SJLJ=y
+CONFIG_PHYS_ADDR_T_64BIT=y
+CONFIG_ARCH_DMA_ADDR_T_64BIT=y
+CONFIG_HAS_DEBUG_LL=y
+CONFIG_HAVE_ARCH_KASAN=y
 CONFIG_BOARD_TQ=y
 CONFIG_CC_IS_GCC=y
 CONFIG_GCC_VERSION=140201
 CONFIG_CLANG_VERSION=0
 CONFIG_GREGORIAN_CALENDER=y
 CONFIG_HAS_KALLSYMS=y
-CONFIG_HAS_CACHE=y
 CONFIG_HAS_DMA=y
-CONFIG_ARCH_HAS_SJLJ=y
 CONFIG_GENERIC_GPIO=y
 CONFIG_BLOCK=y
 CONFIG_BLOCK_WRITE=y
@@ -159,11 +166,10 @@ CONFIG_BLOCK_STATS=y
 CONFIG_FILETYPE=y
 CONFIG_BINFMT=y
 CONFIG_UIMAGE=y
-CONFIG_FITIMAGE=y
 CONFIG_LOGBUF=y
 CONFIG_STDDEV=y
+CONFIG_CDEV_ALIAS=y
 CONFIG_MENUTREE=y
-CONFIG_ARCH_DMA_ADDR_T_64BIT=y
 CONFIG_BOOT=y
 CONFIG_FASTBOOT_BASE=y
 
@@ -242,12 +248,11 @@ CONFIG_BOOTM_OFTREE=y
 CONFIG_BOOTM_UIMAGE=y
 CONFIG_BOOTM_OFTREE_UIMAGE=y
 # CONFIG_BOOTM_AIMAGE is not set
-# CONFIG_BOOTM_ELF is not set
-CONFIG_BOOTM_FITIMAGE=y
-# CONFIG_BOOTM_FITIMAGE_SIGNATURE is not set
+# CONFIG_BOOTM_FITIMAGE is not set
 CONFIG_BOOTM_OPTIONAL_SIGNED_IMAGES=y
 CONFIG_BLSPEC=y
 CONFIG_FLEXIBLE_BOOTARGS=y
+CONFIG_ROOTWAIT_BOOTARG=y
 CONFIG_MMCBLKDEV_ROOTARG=y
 CONFIG_BAREBOX_UPDATE=y
 CONFIG_SYSTEM_PARTITIONS=y
@@ -285,6 +290,8 @@ CONFIG_STATE=y
 # CONFIG_STATE_CRYPTO is not set
 # CONFIG_STATE_BACKWARD_COMPATIBLE is not set
 CONFIG_BOOTCHOOSER=y
+CONFIG_BOOT_DEFAULTS=y
+CONFIG_BAREBOX_DT_2ND=y
 CONFIG_RESET_SOURCE=y
 CONFIG_MACHINE_ID=y
 # CONFIG_SYSTEMD_OF_WATCHDOG is not set
@@ -294,6 +301,7 @@ CONFIG_EXTERNAL_DTS_FRAGMENTS="${PTXDIST_PLATFORMCONFIGDIR}/dts/bootstate.dtsi"
 # OP-TEE loading
 #
 # CONFIG_PBL_OPTEE is not set
+CONFIG_FILETYPE_STRINGS=y
 # end of OP-TEE loading
 
 #
@@ -309,7 +317,6 @@ CONFIG_FASTBOOT_CMD_OEM=y
 #
 CONFIG_COMPILE_LOGLEVEL=6
 CONFIG_DEFAULT_LOGLEVEL=7
-CONFIG_HAS_DEBUG_LL=y
 # CONFIG_DEBUG_LL is not set
 CONFIG_DEBUG_IMX_UART_PORT=1
 CONFIG_DEBUG_ROCKCHIP_UART_PORT=2
@@ -324,7 +331,6 @@ CONFIG_FRAME_POINTER=y
 # CONFIG_PBL_BREAK is not set
 # CONFIG_PRINTF_FULL is not set
 # CONFIG_UBSAN is not set
-CONFIG_HAVE_ARCH_KASAN=y
 CONFIG_CC_HAS_KASAN_GENERIC=y
 # CONFIG_KASAN is not set
 # CONFIG_COMPILE_TEST is not set
@@ -371,6 +377,7 @@ CONFIG_CMD_BLKSTATS=y
 CONFIG_CMD_REGULATOR=y
 CONFIG_CMD_PM_DOMAIN=y
 CONFIG_CMD_NVMEM=y
+# CONFIG_CMD_VARINFO is not set
 CONFIG_CMD_VERSION=y
 # CONFIG_CMD_MMC is not set
 CONFIG_CMD_MMC_EXTCSD=y
@@ -431,6 +438,7 @@ CONFIG_CMD_DIRNAME=y
 CONFIG_CMD_FILETYPE=y
 CONFIG_CMD_LN=y
 CONFIG_CMD_LS=y
+CONFIG_CMD_TREE=y
 # CONFIG_CMD_STAT is not set
 CONFIG_CMD_MD5SUM=y
 CONFIG_CMD_MKDIR=y
@@ -441,6 +449,7 @@ CONFIG_CMD_RMDIR=y
 CONFIG_CMD_SHA1SUM=y
 # CONFIG_CMD_SHA224SUM is not set
 # CONFIG_CMD_SHA256SUM is not set
+# CONFIG_CMD_BASE64 is not set
 # CONFIG_CMD_SHA384SUM is not set
 # CONFIG_CMD_SHA512SUM is not set
 # CONFIG_CMD_FIPTOOL is not set
@@ -469,6 +478,7 @@ CONFIG_NET_CMD_IFUP=y
 CONFIG_CMD_MIITOOL=y
 CONFIG_CMD_PING=y
 # CONFIG_CMD_TFTP is not set
+# CONFIG_CMD_IP is not set
 CONFIG_CMD_IP_ROUTE_GET=y
 # CONFIG_CMD_ETHLOG is not set
 # end of Network
@@ -508,6 +518,7 @@ CONFIG_CMD_MW=y
 #
 CONFIG_CMD_CLK=y
 CONFIG_CMD_DETECT=y
+# CONFIG_CMD_TRUNCATE is not set
 CONFIG_CMD_SYNC=y
 CONFIG_CMD_FLASH=y
 CONFIG_CMD_GPIO=y
@@ -556,7 +567,6 @@ CONFIG_CMD_STATE=y
 
 CONFIG_NET=y
 CONFIG_NET_ETHADDR_FROM_MACHINE_ID=y
-CONFIG_NET_NFS=y
 CONFIG_NET_NETCONSOLE=y
 CONFIG_NET_RESOLV=y
 CONFIG_NET_IFUP=y
@@ -765,7 +775,7 @@ CONFIG_USB_STORAGE=y
 # USB Miscellaneous drivers
 #
 # CONFIG_USB_HUB_USB251XB is not set
-# CONFIG_USB_ONBOARD_HUB is not set
+# CONFIG_USB_ONBOARD_DEV is not set
 CONFIG_TYPEC=y
 # CONFIG_TYPEC_TUSB320 is not set
 CONFIG_USB_GADGET=y
@@ -796,6 +806,7 @@ CONFIG_MCI_WRITE=y
 CONFIG_MCI_ERASE=y
 CONFIG_MCI_MMC_BOOT_PARTITIONS=y
 # CONFIG_MCI_MMC_GPP_PARTITIONS is not set
+# CONFIG_MCI_MMC_RPMB is not set
 
 #
 # --- MCI host drivers ---
@@ -859,7 +870,7 @@ CONFIG_MFD_RK808=y
 CONFIG_STATE_DRV=y
 CONFIG_DEV_MEM=y
 # CONFIG_UBOOTVAR is not set
-# CONFIG_STORAGE_BY_UUID is not set
+# CONFIG_STORAGE_BY_ALIAS is not set
 # end of Misc devices
 
 CONFIG_LED=y
@@ -1178,9 +1189,6 @@ CONFIG_CRC_CCITT=y
 CONFIG_PRINTF_UUID=y
 CONFIG_NLS=y
 # CONFIG_BLOBGEN is not set
-CONFIG_ARCH_HAS_STACK_DUMP=y
-CONFIG_ARCH_HAS_DATA_ABORT_MASK=y
-CONFIG_ARCH_HAS_ZERO_PAGE=y
 # end of Library routines
 
 #
@@ -1196,7 +1204,7 @@ CONFIG_ARCH_HAS_ZERO_PAGE=y
 #
 
 #
-# Extra care needs to be in secure booted systems.
+# Extra care needs to be taken in secure booted systems.
 #
 # CONFIG_BUG_ON_DATA_CORRUPTION is not set
 
