--- a/configs/platform-v8a/barebox.config
+++ b/configs/platform-v8a/barebox.config
@@ -16,7 +16,7 @@ CONFIG_ARCH_MULTIARCH=y
 # CONFIG_ARCH_ARM64_VIRT is not set
 # CONFIG_ARCH_BCM283X is not set
 CONFIG_ARCH_IMX=y
-# CONFIG_ARCH_K3 is not set
+CONFIG_ARCH_K3=y
 # CONFIG_ARCH_SUNXI is not set
 # CONFIG_ARCH_LAYERSCAPE is not set
 CONFIG_ARCH_ROCKCHIP=y
@@ -89,6 +89,16 @@ CONFIG_AHAB=y
 # end of i.MX specific settings
 
 #
+# K3 boards
+#
+CONFIG_MACH_K3_CORTEX_A=y
+CONFIG_MACH_AM625_SK=y
+CONFIG_MACH_BEAGLEPLAY=y
+# CONFIG_ARCH_K3_AUTHENTICATE_IMAGE is not set
+# CONFIG_ARCH_K3_COMMAND_AUTHENTICATE is not set
+# end of K3 boards
+
+#
 # Rockchip Features
 #
 CONFIG_RK_TIMER=1
@@ -132,7 +142,7 @@ CONFIG_ARM_SMCCC=y
 CONFIG_ARM_PSCI_OF=y
 CONFIG_ARM_PSCI_CLIENT=y
 # CONFIG_ARM_BOOTM_ELF is not set
-# CONFIG_ARM_BOOTM_FIP is not set
+CONFIG_ARM_BOOTM_FIP=y
 CONFIG_ARM_ATF=y
 # end of ARM specific settings
 
@@ -319,6 +329,7 @@ CONFIG_COMPILE_LOGLEVEL=6
 CONFIG_DEFAULT_LOGLEVEL=7
 # CONFIG_DEBUG_LL is not set
 CONFIG_DEBUG_IMX_UART_PORT=1
+CONFIG_DEBUG_K3_UART_PORT=0
 CONFIG_DEBUG_ROCKCHIP_UART_PORT=2
 CONFIG_ARCH_WANT_FRAME_POINTERS=y
 CONFIG_FRAME_POINTER=y
@@ -619,6 +630,8 @@ CONFIG_PHYLIB=y
 # Network drivers
 #
 # CONFIG_DRIVER_NET_BCMGENET is not set
+CONFIG_DRIVER_NET_TI_DAVINCI_MDIO=y
+CONFIG_DRIVER_NET_TI_K3_AM65_CPSW_NUSS=y
 # CONFIG_DRIVER_NET_DESIGNWARE_GENERIC is not set
 CONFIG_DRIVER_NET_DESIGNWARE_EQOS=y
 CONFIG_DRIVER_NET_DESIGNWARE_IMX8=y
@@ -695,6 +708,7 @@ CONFIG_I2C_IMX=y
 CONFIG_I2C_IMX_LPI2C=y
 # CONFIG_I2C_DESIGNWARE is not set
 # CONFIG_I2C_MV64XXX is not set
+CONFIG_I2C_OMAP=y
 CONFIG_I2C_RK3X=y
 # end of I2C Hardware Bus support
 
@@ -765,6 +779,7 @@ CONFIG_USB_DWC3=y
 # CONFIG_USB_DWC3_GADGET is not set
 CONFIG_USB_DWC3_DUAL_ROLE=y
 CONFIG_USB_DWC3_OF_SIMPLE=y
+CONFIG_USB_DWC3_AM62=y
 CONFIG_USB_EHCI=y
 CONFIG_USB_XHCI=y
 # CONFIG_USB_ULPI is not set
@@ -806,7 +821,7 @@ CONFIG_MCI_WRITE=y
 CONFIG_MCI_ERASE=y
 CONFIG_MCI_MMC_BOOT_PARTITIONS=y
 # CONFIG_MCI_MMC_GPP_PARTITIONS is not set
-# CONFIG_MCI_MMC_RPMB is not set
+CONFIG_MCI_MMC_RPMB=y
 
 #
 # --- MCI host drivers ---
@@ -820,13 +835,14 @@ CONFIG_MCI_IMX_ESDHC=y
 # CONFIG_MCI_IMX_ESDHC_PIO is not set
 # CONFIG_MCI_MMCI is not set
 CONFIG_MCI_ARASAN=y
-# CONFIG_MCI_AM654 is not set
+CONFIG_MCI_AM654=y
 # CONFIG_MCI_SPI is not set
 CONFIG_MCI_IMX_ESDHC_PBL=y
 CONFIG_HAVE_CLK=y
 CONFIG_CLKDEV_LOOKUP=y
 CONFIG_COMMON_CLK=y
 CONFIG_COMMON_CLK_OF_PROVIDER=y
+CONFIG_TI_SCI_CLK=y
 CONFIG_COMMON_CLK_GPIO=y
 
 #
@@ -849,7 +865,7 @@ CONFIG_CLOCKSOURCE_ARM_ARCHITECTED_TIMER=y
 # CONFIG_MFD_MC9SDZ60 is not set
 # CONFIG_MFD_STMPE is not set
 CONFIG_MFD_SYSCON=y
-# CONFIG_MFD_TPS65219 is not set
+CONFIG_MFD_TPS65219=y
 # CONFIG_MFD_TWL4030 is not set
 # CONFIG_MFD_TWL6030 is not set
 # CONFIG_RAVE_SP_CORE is not set
@@ -907,13 +923,19 @@ CONFIG_WATCHDOG_IMX=y
 # CONFIG_WATCHDOG_IMXULP is not set
 # CONFIG_GPIO_WATCHDOG is not set
 # CONFIG_CADENCE_WATCHDOG is not set
+CONFIG_K3_RTI_WDT=y
 # CONFIG_PWM is not set
 # CONFIG_HWRNG is not set
 
 #
 # DMA support
 #
-# CONFIG_DMADEVICES is not set
+CONFIG_DMADEVICES=y
+
+#
+# DMA Devices
+#
+CONFIG_TI_K3_UDMA=y
 # end of DMA support
 
 CONFIG_GPIOLIB=y
@@ -924,6 +946,7 @@ CONFIG_GPIOLIB=y
 CONFIG_GPIO_GENERIC=y
 # CONFIG_GPIO_74164 is not set
 # CONFIG_GPIO_74XX_MMIO is not set
+CONFIG_GPIO_DAVINCI=y
 # CONFIG_GPIO_GENERIC_PLATFORM is not set
 CONFIG_GPIO_IMX=y
 CONFIG_GPIO_VF610=y
@@ -945,7 +968,7 @@ CONFIG_GPIO_ROCKCHIP=y
 CONFIG_PINCTRL=y
 CONFIG_PINCTRL_IMX_IOMUX_V3=y
 CONFIG_PINCTRL_ROCKCHIP=y
-# CONFIG_PINCTRL_SINGLE is not set
+CONFIG_PINCTRL_SINGLE=y
 # end of Pin controllers
 
 CONFIG_NVMEM=y
@@ -967,6 +990,7 @@ CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED=y
 # CONFIG_REGULATOR_FAN53555 is not set
 # CONFIG_REGULATOR_PFUZE is not set
+CONFIG_REGULATOR_TPS65219=y
 # CONFIG_REGULATOR_ANATOP is not set
 CONFIG_REGULATOR_RK808=y
 
@@ -1007,6 +1031,7 @@ CONFIG_RTC_DRV_DS1307=y
 #
 # CONFIG_FIRMWARE_ALTERA_SERIAL is not set
 # CONFIG_QEMU_FW_CFG is not set
+CONFIG_TI_SCI_PROTOCOL=y
 
 #
 # ARM System Control and Management Interface Protocol
@@ -1060,6 +1085,8 @@ CONFIG_IMX8M_FEATCTRL=y
 #
 # CONFIG_ROCKCHIP_IODOMAIN is not set
 # end of Rockchip SoC drivers
+
+CONFIG_TI_K3_RINGACC=y
 # end of SoC drivers
 
 #
@@ -1072,6 +1099,8 @@ CONFIG_IMX8M_FEATCTRL=y
 CONFIG_IMX_GPCV2_PM_DOMAINS=y
 CONFIG_IMX8M_BLK_CTRL=y
 # end of i.MX PM Domains
+
+CONFIG_TI_SCI_PM_DOMAINS=y
 # end of PM Domains
 
 #
@@ -1095,7 +1124,8 @@ CONFIG_SYSCON_REBOOT_MODE=y
 # CONFIG_POWER_RESET_GPIO is not set
 # CONFIG_POWER_RESET_GPIO_RESTART is not set
 # CONFIG_VIRTIO_MENU is not set
-# CONFIG_MAILBOX is not set
+CONFIG_MAILBOX=y
+CONFIG_TI_MESSAGE_MANAGER=y
 # CONFIG_TEE is not set
 # end of Drivers
 
@@ -1175,6 +1205,7 @@ CONFIG_LZO_DECOMPRESS=y
 CONFIG_FNMATCH=y
 CONFIG_QSORT=y
 CONFIG_IMAGE_SPARSE=y
+CONFIG_FIP=y
 CONFIG_LIBFDT=y
 # CONFIG_RATP is not set
 # CONFIG_ALLOW_PRNG_FALLBACK is not set
