v8a: barebox: version bump 2025.06.1 -> 2025.07.0
barebox v2025.05.0 introduced a regression which broke the
FIT image booting on ARM32. That is fixed with this release

Signed-off-by: Lars Schmidt <l.schmidt@pengutronix.de>

--- a/configs/platform-v8a/barebox-r5.config
+++ b/configs/platform-v8a/barebox-r5.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Barebox/arm 2025.06.1 Configuration
+# Barebox/arm 2025.07.0 Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARCH_LINUX_NAME="arm"
@@ -47,9 +47,11 @@ CONFIG_ARMV7R_MPU=y
 #
 # K3 boards
 #
+CONFIG_MACH_AM62X=y
 CONFIG_MACH_K3_CORTEX_R5=y
 CONFIG_MACH_AM625_SK=y
 CONFIG_MACH_BEAGLEPLAY=y
+# CONFIG_MACH_AM62LX_EVM is not set
 # CONFIG_ARCH_K3_AUTHENTICATE_IMAGE is not set
 # end of K3 boards
 
@@ -79,6 +81,7 @@ CONFIG_ARM_EXCEPTIONS=y
 CONFIG_ARCH_HAS_DATA_ABORT_MASK=y
 CONFIG_ARCH_HAS_ZERO_PAGE=y
 CONFIG_HAVE_ARCH_BOARD_GENERIC_DT=y
+CONFIG_HAVE_ARCH_BOOTM_OFTREE=y
 CONFIG_HAVE_MOD_ARCH_SPECIFIC=y
 CONFIG_ARCH_HAS_SJLJ=y
 CONFIG_HAS_DEBUG_LL=y
@@ -127,11 +130,11 @@ CONFIG_BAREBOX_MAX_PBL_SIZE=0xffffffff
 CONFIG_BAREBOX_MAX_BARE_INIT_SIZE=0xffffffff
 CONFIG_STACK_SIZE=0x8000
 CONFIG_MALLOC_SIZE=0x0
+CONFIG_SCRATCH_SIZE=0x8000
 CONFIG_MALLOC_ALIGNMENT=8
 # end of memory layout
 
 # CONFIG_EXPERIMENTAL is not set
-# CONFIG_MALLOC_DLMALLOC is not set
 CONFIG_MALLOC_TLSF=y
 # CONFIG_MALLOC_DUMMY is not set
 CONFIG_KALLSYMS=y
@@ -175,6 +178,7 @@ CONFIG_DEFAULT_COMPRESSION_NONE=y
 CONFIG_HAS_SCHED=y
 CONFIG_POLLER=y
 CONFIG_BTHREAD=y
+# CONFIG_TLV is not set
 # CONFIG_STATE is not set
 # CONFIG_BOOTCHOOSER is not set
 # CONFIG_BOOT_DEFAULTS is not set
@@ -185,8 +189,9 @@ CONFIG_EXTERNAL_DTS_FRAGMENTS=""
 # OP-TEE loading
 #
 # CONFIG_PBL_OPTEE is not set
-CONFIG_FILETYPE_STRINGS=y
 # end of OP-TEE loading
+
+CONFIG_FILETYPE_STRINGS=y
 # end of General Settings
 
 #
@@ -227,6 +232,7 @@ CONFIG_HAVE_EFI_STUB=y
 #
 # Drivers
 #
+# CONFIG_DEEP_PROBE_DEFAULT is not set
 CONFIG_PM_GENERIC_DOMAINS=y
 CONFIG_REGMAP_FORMATTED=y
 CONFIG_REGMAP_I2C=y
@@ -463,6 +469,15 @@ CONFIG_REMOTEPROC_K3_SYSTEM_CONTROLLER=y
 # end of Remoteproc drivers
 
 # CONFIG_RESET_CONTROLLER is not set
+CONFIG_HW_HAS_PCI=y
+
+#
+# PCI bus options
+#
+# CONFIG_PCI is not set
+# CONFIG_PCI_ECAM_GENERIC is not set
+# end of PCI bus options
+
 # CONFIG_RTC_CLASS is not set
 
 #
@@ -589,6 +604,7 @@ CONFIG_FS_FAT_LFN=y
 #
 # ZSTD support disabled
 #
+# CONFIG_FS_QEMU_FW_CFG is not set
 # end of Filesystem support
 
 #
@@ -656,10 +672,14 @@ CONFIG_CC_HAS_ZERO_CALL_USED_REGS=y
 # CONFIG_ZERO_CALL_USED_REGS is not set
 # end of Memory initialization
 
+#
+# Buffer overflow protection
+#
 CONFIG_STACKPROTECTOR_NONE=y
 # CONFIG_STACKPROTECTOR_STRONG is not set
 CONFIG_PBL_STACKPROTECTOR_NONE=y
 # CONFIG_PBL_STACKPROTECTOR_STRONG is not set
+# end of Buffer overflow protection
 # end of Hardening options
 
 #
