--- a/configs/platform-v8a/barebox.config
+++ b/configs/platform-v8a/barebox.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Barebox/arm 2025.06.1 Configuration
+# Barebox/arm 2025.07.0 Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARCH_LINUX_NAME="arm64"
@@ -91,9 +91,11 @@ CONFIG_AHAB=y
 #
 # K3 boards
 #
+CONFIG_MACH_AM62X=y
 CONFIG_MACH_K3_CORTEX_A=y
 CONFIG_MACH_AM625_SK=y
 CONFIG_MACH_BEAGLEPLAY=y
+# CONFIG_MACH_AM62LX_EVM is not set
 # CONFIG_ARCH_K3_AUTHENTICATE_IMAGE is not set
 # CONFIG_ARCH_K3_COMMAND_AUTHENTICATE is not set
 # end of K3 boards
@@ -123,6 +125,8 @@ CONFIG_MACH_RADXA_ROCK3=y
 # select board features:
 #
 CONFIG_ARCH_ROCKCHIP_ATF=y
+# CONFIG_ARCH_ROCKCHIP_ATF_PASS_FDT is not set
+CONFIG_ARCH_ROCKCHIP_ATF_FDT_SIZE=0x0
 # CONFIG_ARCH_ROCKCHIP_OPTEE is not set
 # end of Rockchip Features
 
@@ -157,6 +161,7 @@ CONFIG_ARCH_HAS_STACK_DUMP=y
 CONFIG_ARCH_HAS_DATA_ABORT_MASK=y
 CONFIG_ARCH_HAS_ZERO_PAGE=y
 CONFIG_HAVE_ARCH_BOARD_GENERIC_DT=y
+CONFIG_HAVE_ARCH_BOOTM_OFTREE=y
 CONFIG_ARCH_HAS_SJLJ=y
 CONFIG_PHYS_ADDR_T_64BIT=y
 CONFIG_ARCH_DMA_ADDR_T_64BIT=y
@@ -221,11 +226,11 @@ CONFIG_BAREBOX_MAX_PBL_SIZE=0xffffffff
 CONFIG_BAREBOX_MAX_BARE_INIT_SIZE=0xffffffff
 CONFIG_STACK_SIZE=0x8000
 CONFIG_MALLOC_SIZE=0x0
+CONFIG_SCRATCH_SIZE=0x8000
 CONFIG_MALLOC_ALIGNMENT=8
 # end of memory layout
 
 # CONFIG_EXPERIMENTAL is not set
-# CONFIG_MALLOC_DLMALLOC is not set
 CONFIG_MALLOC_TLSF=y
 CONFIG_KALLSYMS=y
 CONFIG_RELOCATABLE=y
@@ -255,6 +260,7 @@ CONFIG_BOOTM_SHOW_TYPE=y
 CONFIG_BOOTM_VERBOSE=y
 CONFIG_BOOTM_INITRD=y
 CONFIG_BOOTM_OFTREE=y
+# CONFIG_BOOTM_OFTREE_FALLBACK is not set
 CONFIG_BOOTM_UIMAGE=y
 CONFIG_BOOTM_OFTREE_UIMAGE=y
 # CONFIG_BOOTM_AIMAGE is not set
@@ -296,6 +302,7 @@ CONFIG_DEFAULT_ENVIRONMENT_PATH="$(objtree)/.ptxdist-defaultenv"
 CONFIG_HAS_SCHED=y
 CONFIG_POLLER=y
 # CONFIG_BTHREAD is not set
+# CONFIG_TLV is not set
 CONFIG_STATE=y
 # CONFIG_STATE_CRYPTO is not set
 # CONFIG_STATE_BACKWARD_COMPATIBLE is not set
@@ -304,6 +311,7 @@ CONFIG_BOOT_DEFAULTS=y
 CONFIG_BAREBOX_DT_2ND=y
 CONFIG_RESET_SOURCE=y
 CONFIG_MACHINE_ID=y
+# CONFIG_SERIAL_NUMBER_FIXUP_SYSTEMD_HOSTNAME is not set
 # CONFIG_SYSTEMD_OF_WATCHDOG is not set
 CONFIG_EXTERNAL_DTS_FRAGMENTS="${PTXDIST_PLATFORMCONFIGDIR}/dts/bootstate.dtsi"
 
@@ -311,8 +319,9 @@ CONFIG_EXTERNAL_DTS_FRAGMENTS="${PTXDIST_PLATFORMCONFIGDIR}/dts/bootstate.dtsi"
 # OP-TEE loading
 #
 # CONFIG_PBL_OPTEE is not set
-CONFIG_FILETYPE_STRINGS=y
 # end of OP-TEE loading
+
+CONFIG_FILETYPE_STRINGS=y
 
 #
 # Android Fastboot
@@ -584,10 +593,12 @@ CONFIG_NET_IFUP=y
 CONFIG_NET_DHCP=y
 # CONFIG_NET_SNTP is not set
 CONFIG_NET_FASTBOOT=y
+# CONFIG_NET_9P is not set
 
 #
 # Drivers
 #
+# CONFIG_DEEP_PROBE_DEFAULT is not set
 CONFIG_PM_GENERIC_DOMAINS=y
 CONFIG_FEATURE_CONTROLLER=y
 CONFIG_SOC_BUS=y
@@ -1135,6 +1146,7 @@ CONFIG_TI_MESSAGE_MANAGER=y
 CONFIG_FS=y
 CONFIG_FS_LEGACY=y
 CONFIG_FS_WRITABLE=y
+CONFIG_NETFS_SUPPORT=y
 
 #
 # Some selected filesystems still use the legacy FS API.
@@ -1179,6 +1191,7 @@ CONFIG_FS_FAT_LFN=y
 #
 # ZSTD support disabled
 #
+# CONFIG_FS_QEMU_FW_CFG is not set
 # end of Filesystem support
 
 #
@@ -1254,11 +1267,15 @@ CONFIG_CC_HAS_ZERO_CALL_USED_REGS=y
 # CONFIG_ZERO_CALL_USED_REGS is not set
 # end of Memory initialization
 
+#
+# Buffer overflow protection
+#
 # CONFIG_STACK_GUARD_PAGE is not set
 CONFIG_STACKPROTECTOR_NONE=y
 # CONFIG_STACKPROTECTOR_STRONG is not set
 CONFIG_PBL_STACKPROTECTOR_NONE=y
 # CONFIG_PBL_STACKPROTECTOR_STRONG is not set
+# end of Buffer overflow protection
 # end of Hardening options
 
 #
