gitignore: ignore _r5 toolchain from ti
The ci-prepare script will create a selected_toolchain_r5 file, that was
not part of gitignore. If not created by ci, then it is still needed to
be created manually and should therefore be ignored and never checked
in.

Signed-off-by: Fabian Pflug <f.pflug@pengutronix.de>

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /selected_collectionconfig
 /selected_platformconfig
 /selected_ptxconfig
-/selected_toolchain
+/selected_toolchain*
 /p
 /src
 *.sw*
