platform-v8a: barebox: add patches for imx93
Add patchset [1] to add support for i.MX93 to barebox. This is a minimal
patchset for basic functionality, but it boots the board.

[1] https://lore.barebox.org/barebox/20251021110149.1151936-1-f.pflug@pengutronix.de/

Signed-off-by: Fabian Pflug <f.pflug@pengutronix.de>

--- a/configs/platform-v8a/barebox.config
+++ b/configs/platform-v8a/barebox.config
@@ -75,6 +75,7 @@ CONFIG_MACH_TQ_MBA8MPXL=y
 #
 # CONFIG_MACH_PHYTEC_PHYCORE_IMX93 is not set
 CONFIG_MACH_TQMA93XX=y
+CONFIG_MACH_NXP_IMX93_FRDM=y
 # end of i.MX boards
 
 #
