v8a: barebox: reactivate fitimage support
In commit 8e81204 CONFIG_FITIMAGE and CONFIG_BOOTM_FITIMAGE got disabled.
These kconfig options need to be enabled, so reactivate them again.

Fixes: 8e81204d8a1e ("v8a: barebox: bump version v2025.03.0 -> v2025.06.1")
Signed-off-by: Lars Schmidt <l.schmidt@pengutronix.de>

--- a/configs/platform-v8a/barebox.config
+++ b/configs/platform-v8a/barebox.config
@@ -182,6 +182,7 @@ CONFIG_BLOCK_STATS=y
 CONFIG_FILETYPE=y
 CONFIG_BINFMT=y
 CONFIG_UIMAGE=y
+CONFIG_FITIMAGE=y
 CONFIG_LOGBUF=y
 CONFIG_STDDEV=y
 CONFIG_CDEV_ALIAS=y
@@ -265,7 +266,8 @@ CONFIG_BOOTM_OFTREE=y
 CONFIG_BOOTM_UIMAGE=y
 CONFIG_BOOTM_OFTREE_UIMAGE=y
 # CONFIG_BOOTM_AIMAGE is not set
-# CONFIG_BOOTM_FITIMAGE is not set
+CONFIG_BOOTM_FITIMAGE=y
+# CONFIG_BOOTM_FITIMAGE_SIGNATURE is not set
 CONFIG_BOOTM_OPTIONAL_SIGNED_IMAGES=y
 CONFIG_BLSPEC=y
 CONFIG_FLEXIBLE_BOOTARGS=y
