v7a: barebox: version bump 2025.06.1 -> 2025.11.0
Updating barebox to a current version. Run oldconfig and accepting all
the defaults, except for BOOTM_OFTREE_FALLBACK, where the recommended n
is selected.

Signed-off-by: Fabian Pflug <f.pflug@pengutronix.de>

--- a/configs/platform-v7a/barebox-am335x-mlo.config
+++ b/configs/platform-v7a/barebox-am335x-mlo.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Barebox/arm 2025.06.1 Configuration
+# Barebox/arm 2025.11.0 Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARCH_LINUX_NAME="arm"
@@ -28,6 +28,7 @@ CONFIG_ARCH_MULTIARCH=y
 # CONFIG_ARCH_LAYERSCAPE is not set
 CONFIG_ARCH_OMAP_MULTI=y
 # CONFIG_ARCH_ROCKCHIP is not set
+# CONFIG_ARCH_SAMSUNG is not set
 # CONFIG_ARCH_STM32MP is not set
 # CONFIG_ARCH_VERSATILE is not set
 # CONFIG_ARCH_VEXPRESS is not set
@@ -74,7 +75,9 @@ CONFIG_32BIT=y
 #
 # CONFIG_ARM_OPTIMZED_STRING_FUNCTIONS is not set
 CONFIG_ARM_EXCEPTIONS=y
+# CONFIG_ARM_EXCEPTIONS_PBL is not set
 # CONFIG_ARM_UNWIND is not set
+CONFIG_ARM_MMU_PERMISSIONS=y
 # CONFIG_ARM_SEMIHOSTING is not set
 # CONFIG_ARM_PSCI_CLIENT is not set
 # end of ARM specific settings
@@ -85,9 +88,11 @@ CONFIG_ARM_EXCEPTIONS=y
 # CONFIG_BOARD_GENERIC_DT is not set
 # end of General architecture-dependent options
 
+CONFIG_ARCH_HAS_DMA_WRITE_COMBINE=y
 CONFIG_ARCH_HAS_DATA_ABORT_MASK=y
 CONFIG_ARCH_HAS_ZERO_PAGE=y
 CONFIG_HAVE_ARCH_BOARD_GENERIC_DT=y
+CONFIG_HAVE_ARCH_BOOTM_OFTREE=y
 CONFIG_HAVE_MOD_ARCH_SPECIFIC=y
 CONFIG_ARCH_HAS_SJLJ=y
 CONFIG_HAS_DEBUG_LL=y
@@ -105,10 +110,9 @@ CONFIG_FILETYPE=y
 #
 # General Settings
 #
+CONFIG_NAME=""
 CONFIG_LOCALVERSION=""
 CONFIG_LOCALVERSION_AUTO=y
-CONFIG_HAS_INSECURE_DEFAULTS=y
-CONFIG_INSECURE=y
 CONFIG_BANNER=y
 # CONFIG_MEMINFO is not set
 # CONFIG_ENVIRONMENT_VARIABLES is not set
@@ -137,11 +141,11 @@ CONFIG_BAREBOX_MAX_PBL_SIZE=0xffffffff
 CONFIG_BAREBOX_MAX_BARE_INIT_SIZE=0xffffffff
 CONFIG_STACK_SIZE=0x8000
 CONFIG_MALLOC_SIZE=0x0
+CONFIG_SCRATCH_SIZE=0x8000
 CONFIG_MALLOC_ALIGNMENT=8
 # end of memory layout
 
 # CONFIG_EXPERIMENTAL is not set
-# CONFIG_MALLOC_DLMALLOC is not set
 CONFIG_MALLOC_TLSF=y
 # CONFIG_MALLOC_DUMMY is not set
 # CONFIG_KALLSYMS is not set
@@ -149,6 +153,7 @@ CONFIG_RELOCATABLE=y
 # CONFIG_PANIC_POWEROFF is not set
 # CONFIG_PANIC_HANG is not set
 CONFIG_PANIC_RESET=y
+# CONFIG_PANIC_TRAP is not set
 CONFIG_PROMPT="MLO>"
 CONFIG_BAUDRATE=115200
 CONFIG_SIMPLE_READLINE=y
@@ -157,7 +162,6 @@ CONFIG_CBSIZE=1024
 # CONFIG_SHELL_SIMPLE is not set
 CONFIG_SHELL_NONE=y
 # CONFIG_GLOB is not set
-# CONFIG_PASSWORD is not set
 # CONFIG_ERRNO_MESSAGES is not set
 # CONFIG_BOOTM is not set
 # CONFIG_BAREBOX_UPDATE is not set
@@ -181,17 +185,13 @@ CONFIG_PARTITION_DISK_DOS=y
 CONFIG_DEFAULT_COMPRESSION_NONE=y
 # CONFIG_POLLER is not set
 # CONFIG_BTHREAD is not set
+# CONFIG_TLV is not set
 # CONFIG_STATE is not set
 # CONFIG_BOOTCHOOSER is not set
 # CONFIG_BOOT_DEFAULTS is not set
 # CONFIG_BAREBOX_DT_2ND is not set
 CONFIG_EXTERNAL_DTS_FRAGMENTS=""
-
-#
-# OP-TEE loading
-#
 CONFIG_FILETYPE_STRINGS=y
-# end of OP-TEE loading
 # end of General Settings
 
 #
@@ -230,6 +230,7 @@ CONFIG_HAVE_EFI_STUB=y
 #
 # Drivers
 #
+# CONFIG_DEEP_PROBE_DEFAULT is not set
 CONFIG_OFTREE=y
 CONFIG_OFTREE_MEM_GENERIC=y
 CONFIG_DTC=y
@@ -265,6 +266,7 @@ CONFIG_DRIVER_SPI_OMAP3=y
 # CONFIG_MTD is not set
 CONFIG_DISK=y
 # CONFIG_DISK_WRITE is not set
+# CONFIG_DM_BLK is not set
 
 #
 # drive types
@@ -287,6 +289,8 @@ CONFIG_MCI=y
 # --- Feature list ---
 #
 # CONFIG_MCI_TUNING is not set
+CONFIG_MCI_STARTUP_NONE=y
+# CONFIG_MCI_STARTUP_NONREMOVABLE is not set
 # CONFIG_MCI_STARTUP is not set
 # CONFIG_MCI_WRITE is not set
 # CONFIG_MCI_MMC_BOOT_PARTITIONS is not set
@@ -304,6 +308,7 @@ CONFIG_MCI_OMAP_HSMMC=y
 # CONFIG_MCI_ARASAN is not set
 # CONFIG_MCI_AM654 is not set
 # CONFIG_MCI_SPI is not set
+# CONFIG_MMC_CADENCE_SDHCI is not set
 CONFIG_MCI_OMAP_HSMMC_PBL=y
 # CONFIG_COMMON_CLK is not set
 
@@ -402,6 +407,15 @@ CONFIG_TI_SYSC=y
 # end of Remoteproc drivers
 
 # CONFIG_RESET_CONTROLLER is not set
+CONFIG_HW_HAS_PCI=y
+
+#
+# PCI bus options
+#
+# CONFIG_PCI is not set
+# CONFIG_PCI_ECAM_GENERIC is not set
+# end of PCI bus options
+
 # CONFIG_RTC_CLASS is not set
 
 #
@@ -519,7 +533,79 @@ CONFIG_FS_FAT_LFN=y
 #
 # ZSTD support disabled
 #
+# CONFIG_FS_QEMU_FW_CFG is not set
 # end of Filesystem support
+
+#
+# Security options
+#
+CONFIG_INSECURE=y
+# CONFIG_SECURITY_POLICY is not set
+# CONFIG_PASSWORD is not set
+# CONFIG_CRYPTO_KEYSTORE is not set
+# CONFIG_BLOBGEN is not set
+
+#
+# OP-TEE loading
+#
+# CONFIG_PBL_OPTEE is not set
+# end of OP-TEE loading
+
+#
+# Hardening options
+#
+# CONFIG_BUG_ON_DATA_CORRUPTION is not set
+
+#
+# Memory initialization
+#
+CONFIG_CC_HAS_AUTO_VAR_INIT_PATTERN=y
+CONFIG_CC_HAS_AUTO_VAR_INIT_ZERO_BARE=y
+CONFIG_CC_HAS_AUTO_VAR_INIT_ZERO=y
+# CONFIG_INIT_STACK_NONE is not set
+# CONFIG_INIT_STACK_ALL_PATTERN is not set
+CONFIG_INIT_STACK_ALL_ZERO=y
+# CONFIG_INIT_ON_ALLOC_DEFAULT_ON is not set
+# CONFIG_INIT_ON_FREE_DEFAULT_ON is not set
+CONFIG_CC_HAS_ZERO_CALL_USED_REGS=y
+# CONFIG_ZERO_CALL_USED_REGS is not set
+# end of Memory initialization
+
+#
+# Buffer overflow protection
+#
+# CONFIG_STACK_GUARD_PAGE is not set
+CONFIG_STACKPROTECTOR_NONE=y
+# CONFIG_STACKPROTECTOR_STRONG is not set
+CONFIG_PBL_STACKPROTECTOR_NONE=y
+# CONFIG_PBL_STACKPROTECTOR_STRONG is not set
+# end of Buffer overflow protection
+# end of Hardening options
+
+CONFIG_HAS_INSECURE_DEFAULTS=y
+
+#
+# This barebox configuration has CONFIG_HAS_INSECURE_DEFAULTS=y indicating
+#
+
+#
+# that some of the configured options have potentially insecure defaults.
+#
+
+#
+# Extra care needs to be taken in secure booted systems.
+#
+# end of Security options
+
+#
+# Crypto support
+#
+CONFIG_CRC_ITU_T=y
+# CONFIG_DIGEST is not set
+# CONFIG_CRYPTO_RSA is not set
+# CONFIG_CRYPTO_ECDSA is not set
+# CONFIG_CRYPTO_BUILTIN_KEYS is not set
+# end of Crypto support
 
 #
 # Library routines
@@ -543,6 +629,7 @@ CONFIG_XYMODEM=y
 # CONFIG_ALLOW_PRNG_FALLBACK is not set
 # CONFIG_CRC_CCITT is not set
 # CONFIG_CRC8 is not set
+# CONFIG_CRC16 is not set
 
 #
 # Library gui routines
@@ -551,58 +638,7 @@ CONFIG_XYMODEM=y
 
 # CONFIG_BOOTSTRAP is not set
 # CONFIG_NLS is not set
-# CONFIG_BLOBGEN is not set
 # end of Library routines
-
-#
-# Hardening options
-#
-
-#
-# This barebox configuration has CONFIG_HAS_INSECURE_DEFAULTS=y indicating
-#
-
-#
-# that some of the configured options have potentially insecure defaults.
-#
-
-#
-# Extra care needs to be taken in secure booted systems.
-#
-# CONFIG_BUG_ON_DATA_CORRUPTION is not set
-
-#
-# Memory initialization
-#
-CONFIG_CC_HAS_AUTO_VAR_INIT_PATTERN=y
-CONFIG_CC_HAS_AUTO_VAR_INIT_ZERO_BARE=y
-CONFIG_CC_HAS_AUTO_VAR_INIT_ZERO=y
-# CONFIG_INIT_STACK_NONE is not set
-# CONFIG_INIT_STACK_ALL_PATTERN is not set
-CONFIG_INIT_STACK_ALL_ZERO=y
-# CONFIG_INIT_ON_ALLOC_DEFAULT_ON is not set
-# CONFIG_INIT_ON_FREE_DEFAULT_ON is not set
-CONFIG_CC_HAS_ZERO_CALL_USED_REGS=y
-# CONFIG_ZERO_CALL_USED_REGS is not set
-# end of Memory initialization
-
-# CONFIG_STACK_GUARD_PAGE is not set
-CONFIG_STACKPROTECTOR_NONE=y
-# CONFIG_STACKPROTECTOR_STRONG is not set
-CONFIG_PBL_STACKPROTECTOR_NONE=y
-# CONFIG_PBL_STACKPROTECTOR_STRONG is not set
-# end of Hardening options
-
-#
-# Crypto support
-#
-CONFIG_CRC_ITU_T=y
-# CONFIG_DIGEST is not set
-# CONFIG_CRYPTO_RSA is not set
-# CONFIG_CRYPTO_ECDSA is not set
-# CONFIG_CRYPTO_BUILTIN_KEYS is not set
-# CONFIG_CRYPTO_KEYSTORE is not set
-# end of Crypto support
 
 #
 # Firmware files
