--- a/configs/platform-v7a/barebox-at91.config
+++ b/configs/platform-v7a/barebox-at91.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Barebox/arm 2025.06.1 Configuration
+# Barebox/arm 2025.11.0 Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARCH_LINUX_NAME="arm"
@@ -76,7 +76,6 @@ CONFIG_MACH_SAMA5D4_WIFX=y
 #
 CONFIG_BOARD_ARM_GENERIC_DT=y
 CONFIG_AEABI=y
-# CONFIG_ARM_BOARD_APPEND_ATAG is not set
 # end of System Type
 
 # CONFIG_64BIT is not set
@@ -87,9 +86,12 @@ CONFIG_32BIT=y
 #
 CONFIG_ARM_OPTIMZED_STRING_FUNCTIONS=y
 CONFIG_ARM_EXCEPTIONS=y
+# CONFIG_ARM_EXCEPTIONS_PBL is not set
 CONFIG_ARM_UNWIND=y
+CONFIG_ARM_MMU_PERMISSIONS=y
 # CONFIG_ARM_SEMIHOSTING is not set
 # CONFIG_ARM_PSCI_CLIENT is not set
+# CONFIG_BOOT_ATAGS is not set
 # CONFIG_ARM_BOOTM_ELF is not set
 # CONFIG_ARM_BOOTM_FIP is not set
 # end of ARM specific settings
@@ -101,10 +103,12 @@ CONFIG_BOARD_GENERIC_DT=y
 # CONFIG_BOARD_GENERIC_FIT is not set
 # end of General architecture-dependent options
 
+CONFIG_ARCH_HAS_DMA_WRITE_COMBINE=y
 CONFIG_ARCH_HAS_STACK_DUMP=y
 CONFIG_ARCH_HAS_DATA_ABORT_MASK=y
 CONFIG_ARCH_HAS_ZERO_PAGE=y
 CONFIG_HAVE_ARCH_BOARD_GENERIC_DT=y
+CONFIG_HAVE_ARCH_BOOTM_OFTREE=y
 CONFIG_HAVE_MOD_ARCH_SPECIFIC=y
 CONFIG_ARCH_HAS_SJLJ=y
 CONFIG_HAS_DEBUG_LL=y
@@ -135,10 +139,9 @@ CONFIG_FASTBOOT_BASE=y
 #
 # General Settings
 #
+CONFIG_NAME=""
 CONFIG_LOCALVERSION=""
 CONFIG_LOCALVERSION_AUTO=y
-CONFIG_HAS_INSECURE_DEFAULTS=y
-CONFIG_INSECURE=y
 CONFIG_BANNER=y
 CONFIG_MEMINFO=y
 CONFIG_MEMTEST=y
@@ -169,17 +172,18 @@ CONFIG_BAREBOX_MAX_PBL_SIZE=0xffffffff
 CONFIG_BAREBOX_MAX_BARE_INIT_SIZE=0xffffffff
 CONFIG_STACK_SIZE=0x8000
 CONFIG_MALLOC_SIZE=0x0
+CONFIG_SCRATCH_SIZE=0x8000
 CONFIG_MALLOC_ALIGNMENT=8
 # end of memory layout
 
 # CONFIG_EXPERIMENTAL is not set
-# CONFIG_MALLOC_DLMALLOC is not set
 CONFIG_MALLOC_TLSF=y
 CONFIG_KALLSYMS=y
 CONFIG_RELOCATABLE=y
 # CONFIG_PANIC_POWEROFF is not set
 # CONFIG_PANIC_HANG is not set
 CONFIG_PANIC_RESET=y
+# CONFIG_PANIC_TRAP is not set
 CONFIG_PROMPT="barebox:"
 CONFIG_BAUDRATE=115200
 CONFIG_CBSIZE=1024
@@ -194,7 +198,6 @@ CONFIG_HUSH_FANCY_PROMPT=y
 CONFIG_CMDLINE_EDITING=y
 CONFIG_AUTO_COMPLETE=y
 CONFIG_MENU=y
-# CONFIG_PASSWORD is not set
 CONFIG_ERRNO_MESSAGES=y
 CONFIG_TIMESTAMP=y
 CONFIG_BOOTM=y
@@ -203,6 +206,7 @@ CONFIG_BOOTM_SHOW_TYPE=y
 CONFIG_BOOTM_VERBOSE=y
 CONFIG_BOOTM_INITRD=y
 CONFIG_BOOTM_OFTREE=y
+# CONFIG_BOOTM_OFTREE_FALLBACK is not set
 CONFIG_BOOTM_UIMAGE=y
 CONFIG_BOOTM_OFTREE_UIMAGE=y
 # CONFIG_BOOTM_AIMAGE is not set
@@ -243,7 +247,9 @@ CONFIG_DEFAULT_ENVIRONMENT_GENERIC_NEW_MENU=y
 CONFIG_DEFAULT_ENVIRONMENT_PATH="$(objtree)/.ptxdist-defaultenv"
 CONFIG_HAS_SCHED=y
 CONFIG_POLLER=y
+CONFIG_POLLER_WARN_OVERTIME=y
 CONFIG_BTHREAD=y
+# CONFIG_TLV is not set
 CONFIG_STATE=y
 # CONFIG_STATE_CRYPTO is not set
 # CONFIG_STATE_BACKWARD_COMPATIBLE is not set
@@ -252,16 +258,10 @@ CONFIG_BOOT_DEFAULTS=y
 CONFIG_BAREBOX_DT_2ND=y
 CONFIG_RESET_SOURCE=y
 # CONFIG_MACHINE_ID is not set
+# CONFIG_SERIAL_NUMBER_FIXUP_SYSTEMD_HOSTNAME is not set
 # CONFIG_SYSTEMD_OF_WATCHDOG is not set
 CONFIG_EXTERNAL_DTS_FRAGMENTS="${PTXDIST_PLATFORMCONFIGDIR}/dts/bootstate.dtsi"
-
-#
-# OP-TEE loading
-#
-# CONFIG_BOOTM_OPTEE is not set
-# CONFIG_PBL_OPTEE is not set
 CONFIG_FILETYPE_STRINGS=y
-# end of OP-TEE loading
 
 #
 # Android Fastboot
@@ -333,6 +333,7 @@ CONFIG_CMD_REGULATOR=y
 # CONFIG_CMD_NVMEM is not set
 # CONFIG_CMD_VARINFO is not set
 CONFIG_CMD_VERSION=y
+# CONFIG_CMD_BFETCH is not set
 # CONFIG_CMD_MMC is not set
 # CONFIG_CMD_MMC_EXTCSD is not set
 # CONFIG_CMD_POLLER is not set
@@ -373,6 +374,7 @@ CONFIG_CMD_UMOUNT=y
 #
 # Environment
 #
+# CONFIG_CMD_CREATENV is not set
 CONFIG_CMD_NV=y
 CONFIG_CMD_EXPORT=y
 CONFIG_CMD_DEFAULTENV=y
@@ -450,7 +452,6 @@ CONFIG_CMD_CLEAR=y
 CONFIG_CMD_ECHO=y
 CONFIG_CMD_ECHO_E=y
 CONFIG_CMD_EDIT=y
-# CONFIG_CMD_LOGIN is not set
 CONFIG_CMD_MENU=y
 CONFIG_CMD_MENU_MANAGEMENT=y
 CONFIG_CMD_MENUTREE=y
@@ -496,11 +497,17 @@ CONFIG_CMD_WD_DEFAULT_TIMOUT=0
 # end of Hardware manipulation
 
 #
+# Security
+#
+# CONFIG_CMD_BLOBGEN is not set
+# CONFIG_CMD_LOGIN is not set
+# end of Security
+
+#
 # Miscellaneous
 #
 # CONFIG_CMD_2048 is not set
 CONFIG_CMD_BAREBOX_UPDATE=y
-# CONFIG_CMD_BLOBGEN is not set
 # CONFIG_CMD_FIRMWARELOAD is not set
 # CONFIG_CMD_KALLSYMS is not set
 CONFIG_CMD_OF_COMPATIBLE=y
@@ -530,10 +537,12 @@ CONFIG_NET_IFUP=y
 CONFIG_NET_DHCP=y
 # CONFIG_NET_SNTP is not set
 CONFIG_NET_FASTBOOT=y
+# CONFIG_NET_9P is not set
 
 #
 # Drivers
 #
+# CONFIG_DEEP_PROBE_DEFAULT is not set
 CONFIG_OFTREE=y
 CONFIG_OFTREE_MEM_GENERIC=y
 CONFIG_DTC=y
@@ -584,6 +593,7 @@ CONFIG_DRIVER_NET_MICREL=y
 #
 # MII PHY device drivers
 #
+# CONFIG_ADIN_PHY is not set
 # CONFIG_AR8327N_PHY is not set
 # CONFIG_AT803X_PHY is not set
 # CONFIG_DAVICOM_PHY is not set
@@ -697,6 +707,7 @@ CONFIG_MTD_UBI_FASTMAP=y
 # CONFIG_MTD_UBI_GENERAL_EXTRA_CHECKS is not set
 CONFIG_DISK=y
 CONFIG_DISK_WRITE=y
+# CONFIG_DM_BLK is not set
 
 #
 # drive types
@@ -733,6 +744,8 @@ CONFIG_MCI=y
 # --- Feature list ---
 #
 # CONFIG_MCI_TUNING is not set
+CONFIG_MCI_STARTUP_NONE=y
+# CONFIG_MCI_STARTUP_NONREMOVABLE is not set
 # CONFIG_MCI_STARTUP is not set
 CONFIG_MCI_INFO=y
 CONFIG_MCI_WRITE=y
@@ -754,6 +767,7 @@ CONFIG_MCI_ATMEL_SDHCI=y
 # CONFIG_MCI_ARASAN is not set
 # CONFIG_MCI_AM654 is not set
 # CONFIG_MCI_SPI is not set
+# CONFIG_MMC_CADENCE_SDHCI is not set
 CONFIG_MCI_ATMEL_SDHCI_PBL=y
 CONFIG_HAVE_CLK=y
 CONFIG_CLKDEV_LOOKUP=y
@@ -875,9 +889,15 @@ CONFIG_PINCTRL_AT91PIO4=y
 # end of Pin controllers
 
 CONFIG_NVMEM=y
+CONFIG_NVMEM_LAYOUTS=y
+
+#
+# Layout Types
+#
 # CONFIG_NVMEM_RMEM is not set
 # CONFIG_NVMEM_SNVS_LPGPR is not set
 # CONFIG_EEPROM_93XX46 is not set
+# CONFIG_NVMEM_ATMEL_SHA204A is not set
 
 #
 # Bus devices
@@ -896,6 +916,15 @@ CONFIG_REGULATOR_FIXED=y
 # end of Remoteproc drivers
 
 # CONFIG_RESET_CONTROLLER is not set
+CONFIG_HW_HAS_PCI=y
+
+#
+# PCI bus options
+#
+# CONFIG_PCI is not set
+# CONFIG_PCI_ECAM_GENERIC is not set
+# end of PCI bus options
+
 # CONFIG_RTC_CLASS is not set
 
 #
@@ -977,6 +1006,7 @@ CONFIG_ATMEL_EBI=y
 CONFIG_FS=y
 CONFIG_FS_LEGACY=y
 CONFIG_FS_WRITABLE=y
+CONFIG_NETFS_SUPPORT=y
 
 #
 # Some selected filesystems still use the legacy FS API.
@@ -1025,7 +1055,94 @@ CONFIG_FS_UBIFS_COMPRESSION_ZSTD=y
 #
 # ZSTD support disabled
 #
+# CONFIG_FS_QEMU_FW_CFG is not set
 # end of Filesystem support
+
+#
+# Security options
+#
+CONFIG_INSECURE=y
+# CONFIG_SECURITY_POLICY is not set
+# CONFIG_PASSWORD is not set
+# CONFIG_CRYPTO_KEYSTORE is not set
+# CONFIG_BLOBGEN is not set
+
+#
+# OP-TEE loading
+#
+# CONFIG_BOOTM_OPTEE is not set
+# CONFIG_PBL_OPTEE is not set
+# end of OP-TEE loading
+
+#
+# Hardening options
+#
+# CONFIG_BUG_ON_DATA_CORRUPTION is not set
+
+#
+# Memory initialization
+#
+CONFIG_CC_HAS_AUTO_VAR_INIT_PATTERN=y
+CONFIG_CC_HAS_AUTO_VAR_INIT_ZERO_BARE=y
+CONFIG_CC_HAS_AUTO_VAR_INIT_ZERO=y
+# CONFIG_INIT_STACK_NONE is not set
+# CONFIG_INIT_STACK_ALL_PATTERN is not set
+CONFIG_INIT_STACK_ALL_ZERO=y
+# CONFIG_INIT_ON_ALLOC_DEFAULT_ON is not set
+# CONFIG_INIT_ON_FREE_DEFAULT_ON is not set
+CONFIG_CC_HAS_ZERO_CALL_USED_REGS=y
+# CONFIG_ZERO_CALL_USED_REGS is not set
+# end of Memory initialization
+
+#
+# Buffer overflow protection
+#
+# CONFIG_STACK_GUARD_PAGE is not set
+CONFIG_STACKPROTECTOR_NONE=y
+# CONFIG_STACKPROTECTOR_STRONG is not set
+CONFIG_PBL_STACKPROTECTOR_NONE=y
+# CONFIG_PBL_STACKPROTECTOR_STRONG is not set
+# end of Buffer overflow protection
+# end of Hardening options
+
+CONFIG_HAS_INSECURE_DEFAULTS=y
+
+#
+# This barebox configuration has CONFIG_HAS_INSECURE_DEFAULTS=y indicating
+#
+
+#
+# that some of the configured options have potentially insecure defaults.
+#
+
+#
+# Extra care needs to be taken in secure booted systems.
+#
+# end of Security options
+
+#
+# Crypto support
+#
+CONFIG_CRC32=y
+CONFIG_DIGEST=y
+CONFIG_HAVE_DIGEST_MD5=y
+CONFIG_HAVE_DIGEST_SHA1=y
+CONFIG_HAVE_DIGEST_SHA224=y
+CONFIG_HAVE_DIGEST_SHA256=y
+# CONFIG_DIGEST_CRC32_GENERIC is not set
+CONFIG_DIGEST_MD5_GENERIC=y
+CONFIG_DIGEST_SHA1_GENERIC=y
+# CONFIG_DIGEST_SHA224_GENERIC is not set
+# CONFIG_DIGEST_SHA256_GENERIC is not set
+# CONFIG_DIGEST_SHA384_GENERIC is not set
+# CONFIG_DIGEST_SHA512_GENERIC is not set
+# CONFIG_DIGEST_HMAC_GENERIC is not set
+CONFIG_DIGEST_SHA1_ARM=y
+CONFIG_DIGEST_SHA256_ARM=y
+# CONFIG_CRYPTO_RSA is not set
+# CONFIG_CRYPTO_ECDSA is not set
+# CONFIG_CRYPTO_BUILTIN_KEYS is not set
+# end of Crypto support
 
 #
 # Library routines
@@ -1051,6 +1168,7 @@ CONFIG_LIBFDT=y
 # CONFIG_ALLOW_PRNG_FALLBACK is not set
 # CONFIG_CRC_CCITT is not set
 # CONFIG_CRC8 is not set
+# CONFIG_CRC16 is not set
 
 #
 # Library gui routines
@@ -1059,73 +1177,8 @@ CONFIG_LIBFDT=y
 
 CONFIG_PRINTF_UUID=y
 CONFIG_NLS=y
-# CONFIG_BLOBGEN is not set
 CONFIG_GENERIC_ALLOCATOR=y
 # end of Library routines
-
-#
-# Hardening options
-#
-
-#
-# This barebox configuration has CONFIG_HAS_INSECURE_DEFAULTS=y indicating
-#
-
-#
-# that some of the configured options have potentially insecure defaults.
-#
-
-#
-# Extra care needs to be taken in secure booted systems.
-#
-# CONFIG_BUG_ON_DATA_CORRUPTION is not set
-
-#
-# Memory initialization
-#
-CONFIG_CC_HAS_AUTO_VAR_INIT_PATTERN=y
-CONFIG_CC_HAS_AUTO_VAR_INIT_ZERO_BARE=y
-CONFIG_CC_HAS_AUTO_VAR_INIT_ZERO=y
-# CONFIG_INIT_STACK_NONE is not set
-# CONFIG_INIT_STACK_ALL_PATTERN is not set
-CONFIG_INIT_STACK_ALL_ZERO=y
-# CONFIG_INIT_ON_ALLOC_DEFAULT_ON is not set
-# CONFIG_INIT_ON_FREE_DEFAULT_ON is not set
-CONFIG_CC_HAS_ZERO_CALL_USED_REGS=y
-# CONFIG_ZERO_CALL_USED_REGS is not set
-# end of Memory initialization
-
-# CONFIG_STACK_GUARD_PAGE is not set
-CONFIG_STACKPROTECTOR_NONE=y
-# CONFIG_STACKPROTECTOR_STRONG is not set
-CONFIG_PBL_STACKPROTECTOR_NONE=y
-# CONFIG_PBL_STACKPROTECTOR_STRONG is not set
-# end of Hardening options
-
-#
-# Crypto support
-#
-CONFIG_CRC32=y
-CONFIG_DIGEST=y
-CONFIG_HAVE_DIGEST_MD5=y
-CONFIG_HAVE_DIGEST_SHA1=y
-CONFIG_HAVE_DIGEST_SHA224=y
-CONFIG_HAVE_DIGEST_SHA256=y
-# CONFIG_DIGEST_CRC32_GENERIC is not set
-CONFIG_DIGEST_MD5_GENERIC=y
-CONFIG_DIGEST_SHA1_GENERIC=y
-# CONFIG_DIGEST_SHA224_GENERIC is not set
-# CONFIG_DIGEST_SHA256_GENERIC is not set
-# CONFIG_DIGEST_SHA384_GENERIC is not set
-# CONFIG_DIGEST_SHA512_GENERIC is not set
-# CONFIG_DIGEST_HMAC_GENERIC is not set
-CONFIG_DIGEST_SHA1_ARM=y
-CONFIG_DIGEST_SHA256_ARM=y
-# CONFIG_CRYPTO_RSA is not set
-# CONFIG_CRYPTO_ECDSA is not set
-# CONFIG_CRYPTO_BUILTIN_KEYS is not set
-# CONFIG_CRYPTO_KEYSTORE is not set
-# end of Crypto support
 
 #
 # Firmware files
