--- a/configs/platform-v7a/barebox.config
+++ b/configs/platform-v7a/barebox.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Barebox/arm 2025.06.1 Configuration
+# Barebox/arm 2025.11.0 Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARCH_LINUX_NAME="arm"
@@ -30,6 +30,7 @@ CONFIG_ARCH_IMX=y
 # CONFIG_ARCH_LAYERSCAPE is not set
 CONFIG_ARCH_OMAP_MULTI=y
 # CONFIG_ARCH_ROCKCHIP is not set
+# CONFIG_ARCH_SAMSUNG is not set
 CONFIG_ARCH_STM32MP=y
 # CONFIG_ARCH_VERSATILE is not set
 CONFIG_ARCH_VEXPRESS=y
@@ -213,8 +214,6 @@ CONFIG_MACH_VEXPRESS=y
 CONFIG_BOARD_ARM_GENERIC_DT=y
 CONFIG_AEABI=y
 CONFIG_THUMB2_BAREBOX=y
-CONFIG_ARM_BOARD_APPEND_ATAG=y
-# CONFIG_ARM_BOARD_PREPEND_ATAG is not set
 # end of System Type
 
 # CONFIG_64BIT is not set
@@ -225,12 +224,15 @@ CONFIG_32BIT=y
 #
 CONFIG_ARM_OPTIMZED_STRING_FUNCTIONS=y
 CONFIG_ARM_EXCEPTIONS=y
+# CONFIG_ARM_EXCEPTIONS_PBL is not set
 CONFIG_ARM_UNWIND=y
+CONFIG_ARM_MMU_PERMISSIONS=y
 # CONFIG_ARM_SEMIHOSTING is not set
 CONFIG_ARM_SMCCC=y
 CONFIG_ARM_SECURE_MONITOR=y
 CONFIG_ARM_PSCI_OF=y
 CONFIG_ARM_PSCI_CLIENT=y
+# CONFIG_BOOT_ATAGS is not set
 # CONFIG_ARM_BOOTM_ELF is not set
 # CONFIG_ARM_BOOTM_FIP is not set
 # end of ARM specific settings
@@ -242,10 +244,12 @@ CONFIG_BOARD_GENERIC_DT=y
 # CONFIG_BOARD_GENERIC_FIT is not set
 # end of General architecture-dependent options
 
+CONFIG_ARCH_HAS_DMA_WRITE_COMBINE=y
 CONFIG_ARCH_HAS_STACK_DUMP=y
 CONFIG_ARCH_HAS_DATA_ABORT_MASK=y
 CONFIG_ARCH_HAS_ZERO_PAGE=y
 CONFIG_HAVE_ARCH_BOARD_GENERIC_DT=y
+CONFIG_HAVE_ARCH_BOOTM_OFTREE=y
 CONFIG_HAVE_MOD_ARCH_SPECIFIC=y
 CONFIG_ARCH_HAS_SJLJ=y
 CONFIG_HAS_DEBUG_LL=y
@@ -276,10 +280,9 @@ CONFIG_FASTBOOT_BASE=y
 #
 # General Settings
 #
+CONFIG_NAME=""
 CONFIG_LOCALVERSION=""
 CONFIG_LOCALVERSION_AUTO=y
-CONFIG_HAS_INSECURE_DEFAULTS=y
-CONFIG_INSECURE=y
 CONFIG_BANNER=y
 CONFIG_MEMINFO=y
 CONFIG_MEMTEST=y
@@ -311,17 +314,18 @@ CONFIG_BAREBOX_MAX_PBL_SIZE=0xffffffff
 CONFIG_BAREBOX_MAX_BARE_INIT_SIZE=0xffffffff
 CONFIG_STACK_SIZE=0x8000
 CONFIG_MALLOC_SIZE=0x0
+CONFIG_SCRATCH_SIZE=0x8000
 CONFIG_MALLOC_ALIGNMENT=8
 # end of memory layout
 
 # CONFIG_EXPERIMENTAL is not set
-# CONFIG_MALLOC_DLMALLOC is not set
 CONFIG_MALLOC_TLSF=y
 CONFIG_KALLSYMS=y
 CONFIG_RELOCATABLE=y
 # CONFIG_PANIC_POWEROFF is not set
 # CONFIG_PANIC_HANG is not set
 CONFIG_PANIC_RESET=y
+# CONFIG_PANIC_TRAP is not set
 CONFIG_PROMPT="barebox> "
 CONFIG_BAUDRATE=115200
 CONFIG_CBSIZE=1024
@@ -336,7 +340,6 @@ CONFIG_HUSH_FANCY_PROMPT=y
 CONFIG_CMDLINE_EDITING=y
 CONFIG_AUTO_COMPLETE=y
 CONFIG_MENU=y
-# CONFIG_PASSWORD is not set
 CONFIG_ERRNO_MESSAGES=y
 # CONFIG_TIMESTAMP is not set
 CONFIG_BOOTM=y
@@ -345,6 +348,7 @@ CONFIG_BOOTM_SHOW_TYPE=y
 CONFIG_BOOTM_VERBOSE=y
 CONFIG_BOOTM_INITRD=y
 CONFIG_BOOTM_OFTREE=y
+# CONFIG_BOOTM_OFTREE_FALLBACK is not set
 CONFIG_BOOTM_UIMAGE=y
 CONFIG_BOOTM_OFTREE_UIMAGE=y
 # CONFIG_BOOTM_AIMAGE is not set
@@ -386,7 +390,9 @@ CONFIG_DEFAULT_ENVIRONMENT_GENERIC_NEW_DFU=y
 CONFIG_DEFAULT_ENVIRONMENT_PATH="$(objtree)/.ptxdist-defaultenv"
 CONFIG_HAS_SCHED=y
 CONFIG_POLLER=y
+CONFIG_POLLER_WARN_OVERTIME=y
 CONFIG_BTHREAD=y
+# CONFIG_TLV is not set
 CONFIG_STATE=y
 # CONFIG_STATE_CRYPTO is not set
 # CONFIG_STATE_BACKWARD_COMPATIBLE is not set
@@ -395,18 +401,10 @@ CONFIG_BOOT_DEFAULTS=y
 CONFIG_BAREBOX_DT_2ND=y
 CONFIG_RESET_SOURCE=y
 CONFIG_MACHINE_ID=y
+# CONFIG_SERIAL_NUMBER_FIXUP_SYSTEMD_HOSTNAME is not set
 # CONFIG_SYSTEMD_OF_WATCHDOG is not set
 CONFIG_EXTERNAL_DTS_FRAGMENTS="${PTXDIST_PLATFORMCONFIGDIR}/dts/bootstate.dtsi"
-
-#
-# OP-TEE loading
-#
-CONFIG_HAVE_OPTEE=y
-CONFIG_OPTEE_SIZE=0x03000000
-CONFIG_OPTEE_SHM_SIZE=0x400000
-# CONFIG_BOOTM_OPTEE is not set
 CONFIG_FILETYPE_STRINGS=y
-# end of OP-TEE loading
 
 #
 # Android Fastboot
@@ -478,6 +476,7 @@ CONFIG_CMD_REGULATOR=y
 # CONFIG_CMD_NVMEM is not set
 # CONFIG_CMD_VARINFO is not set
 CONFIG_CMD_VERSION=y
+# CONFIG_CMD_BFETCH is not set
 CONFIG_CMD_MMC=y
 CONFIG_CMD_MMC_EXTCSD=y
 # CONFIG_CMD_POLLER is not set
@@ -518,6 +517,7 @@ CONFIG_CMD_UMOUNT=y
 #
 # Environment
 #
+# CONFIG_CMD_CREATENV is not set
 CONFIG_CMD_NV=y
 CONFIG_CMD_EXPORT=y
 CONFIG_CMD_DEFAULTENV=y
@@ -595,7 +595,6 @@ CONFIG_CMD_CLEAR=y
 CONFIG_CMD_ECHO=y
 CONFIG_CMD_ECHO_E=y
 CONFIG_CMD_EDIT=y
-# CONFIG_CMD_LOGIN is not set
 CONFIG_CMD_MENU=y
 CONFIG_CMD_MENU_MANAGEMENT=y
 CONFIG_CMD_MENUTREE=y
@@ -647,14 +646,20 @@ CONFIG_CMD_WD_DEFAULT_TIMOUT=0
 # end of Hardware manipulation
 
 #
+# Security
+#
+# CONFIG_CMD_BLOBGEN is not set
+# CONFIG_CMD_KEYSTORE is not set
+# CONFIG_CMD_LOGIN is not set
+# end of Security
+
+#
 # Miscellaneous
 #
 # CONFIG_CMD_2048 is not set
 CONFIG_CMD_BAREBOX_UPDATE=y
-# CONFIG_CMD_BLOBGEN is not set
 # CONFIG_CMD_FIRMWARELOAD is not set
 # CONFIG_CMD_KALLSYMS is not set
-# CONFIG_CMD_KEYSTORE is not set
 CONFIG_CMD_OF_COMPATIBLE=y
 CONFIG_CMD_OF_DIFF=y
 CONFIG_CMD_OF_DUMP=y
@@ -684,10 +689,12 @@ CONFIG_NET_IFUP=y
 CONFIG_NET_DHCP=y
 # CONFIG_NET_SNTP is not set
 CONFIG_NET_FASTBOOT=y
+# CONFIG_NET_9P is not set
 
 #
 # Drivers
 #
+# CONFIG_DEEP_PROBE_DEFAULT is not set
 CONFIG_REGMAP_FORMATTED=y
 CONFIG_REGMAP_I2C=y
 CONFIG_OFTREE=y
@@ -748,6 +755,7 @@ CONFIG_DRIVER_NET_SMC911X=y
 #
 # MII PHY device drivers
 #
+# CONFIG_ADIN_PHY is not set
 # CONFIG_AR8327N_PHY is not set
 CONFIG_AT803X_PHY=y
 # CONFIG_DAVICOM_PHY is not set
@@ -888,6 +896,7 @@ CONFIG_MTD_UBI_FASTMAP=y
 CONFIG_DISK=y
 CONFIG_DISK_IDE_SFF=y
 CONFIG_DISK_WRITE=y
+# CONFIG_DM_BLK is not set
 
 #
 # drive types
@@ -944,6 +953,7 @@ CONFIG_VIDEO=y
 # CONFIG_DRIVER_VIDEO_FB_SSD1307 is not set
 CONFIG_VIDEO_VPL=y
 # CONFIG_DRIVER_VIDEO_STM32_LTDC is not set
+# CONFIG_DRIVER_VIDEO_STM32_DSI is not set
 # CONFIG_DRIVER_VIDEO_BCM283X is not set
 # CONFIG_DRIVER_VIDEO_ROCKCHIP is not set
 CONFIG_DRIVER_VIDEO_IMX_IPUV3=y
@@ -966,6 +976,7 @@ CONFIG_DRIVER_VIDEO_SIMPLEFB=y
 # CONFIG_DRIVER_VIDEO_PANEL_SITRONIX_ST7789V is not set
 # CONFIG_DRIVER_VIDEO_PANEL_MIPI_DBI is not set
 # CONFIG_DRIVER_VIDEO_DW_HDMI is not set
+# CONFIG_DRIVER_VIDEO_DW_MIPI_DSI is not set
 # CONFIG_SOUND is not set
 CONFIG_MCI_SDHCI=y
 CONFIG_MCI=y
@@ -974,6 +985,8 @@ CONFIG_MCI=y
 # --- Feature list ---
 #
 # CONFIG_MCI_TUNING is not set
+# CONFIG_MCI_STARTUP_NONE is not set
+# CONFIG_MCI_STARTUP_NONREMOVABLE is not set
 CONFIG_MCI_STARTUP=y
 CONFIG_MCI_INFO=y
 CONFIG_MCI_WRITE=y
@@ -999,6 +1012,7 @@ CONFIG_MCI_MMCI=y
 # CONFIG_MCI_AM654 is not set
 # CONFIG_MCI_SPI is not set
 CONFIG_MCI_STM32_SDMMC2=y
+# CONFIG_MMC_CADENCE_SDHCI is not set
 CONFIG_MCI_OMAP_HSMMC_PBL=y
 CONFIG_HAVE_CLK=y
 CONFIG_CLKDEV_LOOKUP=y
@@ -1154,6 +1168,11 @@ CONFIG_PINCTRL_STM32=y
 # end of Pin controllers
 
 CONFIG_NVMEM=y
+CONFIG_NVMEM_LAYOUTS=y
+
+#
+# Layout Types
+#
 # CONFIG_NVMEM_RMEM is not set
 # CONFIG_NVMEM_SNVS_LPGPR is not set
 CONFIG_IMX_OCOTP=y
@@ -1162,6 +1181,7 @@ CONFIG_IMX_OCOTP=y
 CONFIG_STM32_BSEC=y
 CONFIG_STM32_BSEC_WRITE=y
 CONFIG_STM32_BSEC_OPTEE_TA=y
+# CONFIG_NVMEM_ATMEL_SHA204A is not set
 
 #
 # Bus devices
@@ -1195,6 +1215,7 @@ CONFIG_RESET_CONTROLLER=y
 CONFIG_RESET_SIMPLE=y
 # CONFIG_RESET_IMX7 is not set
 CONFIG_RESET_SCMI=y
+# CONFIG_RESET_SOCFPGA32 is not set
 CONFIG_HW_HAS_PCI=y
 
 #
@@ -1302,6 +1323,7 @@ CONFIG_OF_FIXUP_OPTEE=y
 CONFIG_FS=y
 CONFIG_FS_LEGACY=y
 CONFIG_FS_WRITABLE=y
+CONFIG_NETFS_SUPPORT=y
 
 #
 # Some selected filesystems still use the legacy FS API.
@@ -1350,7 +1372,99 @@ CONFIG_FS_UBIFS_COMPRESSION_ZSTD=y
 #
 # ZSTD support disabled
 #
+# CONFIG_FS_QEMU_FW_CFG is not set
 # end of Filesystem support
+
+#
+# Security options
+#
+CONFIG_INSECURE=y
+# CONFIG_SECURITY_POLICY is not set
+# CONFIG_PASSWORD is not set
+CONFIG_CRYPTO_KEYSTORE=y
+# CONFIG_BLOBGEN is not set
+
+#
+# OP-TEE loading
+#
+CONFIG_HAVE_OPTEE=y
+CONFIG_OPTEE_SIZE=0x03000000
+CONFIG_OPTEE_SHM_SIZE=0x400000
+# CONFIG_BOOTM_OPTEE is not set
+# CONFIG_PBL_OPTEE is not set
+# end of OP-TEE loading
+
+#
+# Hardening options
+#
+# CONFIG_BUG_ON_DATA_CORRUPTION is not set
+
+#
+# Memory initialization
+#
+CONFIG_CC_HAS_AUTO_VAR_INIT_PATTERN=y
+CONFIG_CC_HAS_AUTO_VAR_INIT_ZERO_BARE=y
+CONFIG_CC_HAS_AUTO_VAR_INIT_ZERO=y
+# CONFIG_INIT_STACK_NONE is not set
+# CONFIG_INIT_STACK_ALL_PATTERN is not set
+CONFIG_INIT_STACK_ALL_ZERO=y
+# CONFIG_INIT_ON_ALLOC_DEFAULT_ON is not set
+# CONFIG_INIT_ON_FREE_DEFAULT_ON is not set
+CONFIG_CC_HAS_ZERO_CALL_USED_REGS=y
+# CONFIG_ZERO_CALL_USED_REGS is not set
+# end of Memory initialization
+
+#
+# Buffer overflow protection
+#
+# CONFIG_STACK_GUARD_PAGE is not set
+CONFIG_STACKPROTECTOR=y
+# CONFIG_STACKPROTECTOR_NONE is not set
+CONFIG_STACKPROTECTOR_STRONG=y
+CONFIG_PBL_STACKPROTECTOR_NONE=y
+# CONFIG_PBL_STACKPROTECTOR_STRONG is not set
+# end of Buffer overflow protection
+# end of Hardening options
+
+CONFIG_HAS_INSECURE_DEFAULTS=y
+
+#
+# This barebox configuration has CONFIG_HAS_INSECURE_DEFAULTS=y indicating
+#
+
+#
+# that some of the configured options have potentially insecure defaults.
+#
+
+#
+# Extra care needs to be taken in secure booted systems.
+#
+# end of Security options
+
+#
+# Crypto support
+#
+CONFIG_CRC32=y
+CONFIG_DIGEST=y
+CONFIG_HAVE_DIGEST_MD5=y
+CONFIG_HAVE_DIGEST_SHA1=y
+CONFIG_HAVE_DIGEST_SHA224=y
+CONFIG_HAVE_DIGEST_SHA256=y
+CONFIG_HAVE_DIGEST_HMAC=y
+# CONFIG_DIGEST_CRC32_GENERIC is not set
+CONFIG_DIGEST_MD5_GENERIC=y
+CONFIG_DIGEST_SHA1_GENERIC=y
+# CONFIG_DIGEST_SHA224_GENERIC is not set
+# CONFIG_DIGEST_SHA256_GENERIC is not set
+# CONFIG_DIGEST_SHA384_GENERIC is not set
+# CONFIG_DIGEST_SHA512_GENERIC is not set
+CONFIG_DIGEST_HMAC_GENERIC=y
+CONFIG_DIGEST_SHA1_ARM=y
+CONFIG_DIGEST_SHA256_ARM=y
+# CONFIG_CRYPTO_RSA is not set
+# CONFIG_CRYPTO_ECDSA is not set
+# CONFIG_CRYPTO_BUILTIN_KEYS is not set
+# end of Crypto support
 
 #
 # Library routines
@@ -1386,6 +1500,7 @@ CONFIG_LIBFDT=y
 CONFIG_ALLOW_PRNG_FALLBACK=y
 # CONFIG_CRC_CCITT is not set
 CONFIG_CRC8=y
+# CONFIG_CRC16 is not set
 
 #
 # Library gui routines
@@ -1401,75 +1516,8 @@ CONFIG_LODEPNG=y
 # CONFIG_BAREBOX_LOGO is not set
 CONFIG_PRINTF_UUID=y
 CONFIG_NLS=y
-# CONFIG_BLOBGEN is not set
 CONFIG_IDR=y
 # end of Library routines
-
-#
-# Hardening options
-#
-
-#
-# This barebox configuration has CONFIG_HAS_INSECURE_DEFAULTS=y indicating
-#
-
-#
-# that some of the configured options have potentially insecure defaults.
-#
-
-#
-# Extra care needs to be taken in secure booted systems.
-#
-# CONFIG_BUG_ON_DATA_CORRUPTION is not set
-
-#
-# Memory initialization
-#
-CONFIG_CC_HAS_AUTO_VAR_INIT_PATTERN=y
-CONFIG_CC_HAS_AUTO_VAR_INIT_ZERO_BARE=y
-CONFIG_CC_HAS_AUTO_VAR_INIT_ZERO=y
-# CONFIG_INIT_STACK_NONE is not set
-# CONFIG_INIT_STACK_ALL_PATTERN is not set
-CONFIG_INIT_STACK_ALL_ZERO=y
-# CONFIG_INIT_ON_ALLOC_DEFAULT_ON is not set
-# CONFIG_INIT_ON_FREE_DEFAULT_ON is not set
-CONFIG_CC_HAS_ZERO_CALL_USED_REGS=y
-# CONFIG_ZERO_CALL_USED_REGS is not set
-# end of Memory initialization
-
-# CONFIG_STACK_GUARD_PAGE is not set
-CONFIG_STACKPROTECTOR=y
-# CONFIG_STACKPROTECTOR_NONE is not set
-CONFIG_STACKPROTECTOR_STRONG=y
-CONFIG_PBL_STACKPROTECTOR_NONE=y
-# CONFIG_PBL_STACKPROTECTOR_STRONG is not set
-# end of Hardening options
-
-#
-# Crypto support
-#
-CONFIG_CRC32=y
-CONFIG_DIGEST=y
-CONFIG_HAVE_DIGEST_MD5=y
-CONFIG_HAVE_DIGEST_SHA1=y
-CONFIG_HAVE_DIGEST_SHA224=y
-CONFIG_HAVE_DIGEST_SHA256=y
-CONFIG_HAVE_DIGEST_HMAC=y
-# CONFIG_DIGEST_CRC32_GENERIC is not set
-CONFIG_DIGEST_MD5_GENERIC=y
-CONFIG_DIGEST_SHA1_GENERIC=y
-# CONFIG_DIGEST_SHA224_GENERIC is not set
-# CONFIG_DIGEST_SHA256_GENERIC is not set
-# CONFIG_DIGEST_SHA384_GENERIC is not set
-# CONFIG_DIGEST_SHA512_GENERIC is not set
-CONFIG_DIGEST_HMAC_GENERIC=y
-CONFIG_DIGEST_SHA1_ARM=y
-CONFIG_DIGEST_SHA256_ARM=y
-# CONFIG_CRYPTO_RSA is not set
-# CONFIG_CRYPTO_ECDSA is not set
-# CONFIG_CRYPTO_BUILTIN_KEYS is not set
-CONFIG_CRYPTO_KEYSTORE=y
-# end of Crypto support
 
 #
 # Firmware files
