--- a/configs/platform-v8a/barebox.config
+++ b/configs/platform-v8a/barebox.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Barebox/arm 2025.07.0 Configuration
+# Barebox/arm 2025.11.0 Configuration
 #
 CONFIG_ARM=y
 CONFIG_ARCH_LINUX_NAME="arm64"
@@ -13,6 +13,7 @@ CONFIG_ARM_LINUX=y
 # System Type
 #
 CONFIG_ARCH_MULTIARCH=y
+# CONFIG_ARCH_SOCFPGA is not set
 # CONFIG_ARCH_ARM64_VIRT is not set
 # CONFIG_ARCH_BCM283X is not set
 CONFIG_ARCH_IMX=y
@@ -20,6 +21,7 @@ CONFIG_ARCH_K3=y
 # CONFIG_ARCH_SUNXI is not set
 # CONFIG_ARCH_LAYERSCAPE is not set
 CONFIG_ARCH_ROCKCHIP=y
+# CONFIG_ARCH_SAMSUNG is not set
 # CONFIG_ARCH_ZYNQMP is not set
 
 #
@@ -38,6 +40,7 @@ CONFIG_USB_GADGET_DRIVER_ARC_PBL=y
 CONFIG_ARCH_IMX_ATF=y
 CONFIG_ARCH_IMX_ROMAPI=y
 CONFIG_ARCH_IMX_SCRATCHMEM=y
+CONFIG_ARCH_IMX_SNVS=y
 
 #
 # i.MX boards
@@ -99,6 +102,8 @@ CONFIG_MACH_BEAGLEPLAY=y
 # CONFIG_MACH_AM62LX_EVM is not set
 # CONFIG_ARCH_K3_AUTHENTICATE_IMAGE is not set
 # CONFIG_ARCH_K3_COMMAND_AUTHENTICATE is not set
+CONFIG_ARCH_K3_SIGNING_KEY_TI_DEVEL=y
+# CONFIG_ARCH_K3_SIGNING_KEY_CUSTOM is not set
 # end of K3 boards
 
 #
@@ -116,6 +121,7 @@ CONFIG_MACH_RK3568_EVB=y
 # CONFIG_MACH_PINE64_PINETAB2 is not set
 # CONFIG_MACH_PINE64_QUARTZ64 is not set
 # CONFIG_MACH_PROTONIC_MECSBC is not set
+# CONFIG_MACH_PROTONIC_PRTPUK is not set
 CONFIG_MACH_RADXA_ROCK3=y
 # CONFIG_MACH_RADXA_ROCK5 is not set
 # CONFIG_MACH_RADXA_CM3 is not set
@@ -129,6 +135,7 @@ CONFIG_ARCH_ROCKCHIP_ATF=y
 # CONFIG_ARCH_ROCKCHIP_ATF_PASS_FDT is not set
 CONFIG_ARCH_ROCKCHIP_ATF_FDT_SIZE=0x0
 # CONFIG_ARCH_ROCKCHIP_OPTEE is not set
+# CONFIG_ARCH_ROCKCHIP_IMAGE_SIGNED is not set
 # end of Rockchip Features
 
 CONFIG_BOARD_ARM_GENERIC_DT=y
@@ -142,6 +149,8 @@ CONFIG_64BIT=y
 #
 CONFIG_ARM_OPTIMZED_STRING_FUNCTIONS=y
 CONFIG_ARM_EXCEPTIONS=y
+# CONFIG_ARM_EXCEPTIONS_PBL is not set
+CONFIG_ARM_MMU_PERMISSIONS=y
 # CONFIG_ARM_SEMIHOSTING is not set
 CONFIG_ARM_SMCCC=y
 CONFIG_ARM_PSCI_OF=y
@@ -158,6 +167,7 @@ CONFIG_BOARD_GENERIC_DT=y
 # CONFIG_BOARD_GENERIC_FIT is not set
 # end of General architecture-dependent options
 
+CONFIG_ARCH_HAS_DMA_WRITE_COMBINE=y
 CONFIG_ARCH_HAS_STACK_DUMP=y
 CONFIG_ARCH_HAS_DATA_ABORT_MASK=y
 CONFIG_ARCH_HAS_ZERO_PAGE=y
@@ -193,10 +203,9 @@ CONFIG_FASTBOOT_BASE=y
 #
 # General Settings
 #
+CONFIG_NAME=""
 CONFIG_LOCALVERSION=""
 CONFIG_LOCALVERSION_AUTO=y
-CONFIG_HAS_INSECURE_DEFAULTS=y
-CONFIG_INSECURE=y
 CONFIG_BANNER=y
 CONFIG_MEMINFO=y
 CONFIG_MEMTEST=y
@@ -239,6 +248,7 @@ CONFIG_RELOCATABLE=y
 # CONFIG_PANIC_POWEROFF is not set
 # CONFIG_PANIC_HANG is not set
 CONFIG_PANIC_RESET=y
+# CONFIG_PANIC_TRAP is not set
 CONFIG_PROMPT="barebox:"
 CONFIG_BAUDRATE=115200
 CONFIG_CBSIZE=1024
@@ -253,7 +263,6 @@ CONFIG_HUSH_FANCY_PROMPT=y
 CONFIG_CMDLINE_EDITING=y
 CONFIG_AUTO_COMPLETE=y
 CONFIG_MENU=y
-# CONFIG_PASSWORD is not set
 CONFIG_ERRNO_MESSAGES=y
 CONFIG_TIMESTAMP=y
 CONFIG_BOOTM=y
@@ -304,6 +313,7 @@ CONFIG_DEFAULT_ENVIRONMENT_GENERIC_NEW_REBOOT_MODE=y
 CONFIG_DEFAULT_ENVIRONMENT_PATH="$(objtree)/.ptxdist-defaultenv"
 CONFIG_HAS_SCHED=y
 CONFIG_POLLER=y
+CONFIG_POLLER_WARN_OVERTIME=y
 # CONFIG_BTHREAD is not set
 # CONFIG_TLV is not set
 CONFIG_STATE=y
@@ -317,13 +327,6 @@ CONFIG_MACHINE_ID=y
 # CONFIG_SERIAL_NUMBER_FIXUP_SYSTEMD_HOSTNAME is not set
 # CONFIG_SYSTEMD_OF_WATCHDOG is not set
 CONFIG_EXTERNAL_DTS_FRAGMENTS="${PTXDIST_PLATFORMCONFIGDIR}/dts/bootstate.dtsi"
-
-#
-# OP-TEE loading
-#
-# CONFIG_PBL_OPTEE is not set
-# end of OP-TEE loading
-
 CONFIG_FILETYPE_STRINGS=y
 
 #
@@ -368,6 +371,7 @@ CONFIG_CC_HAS_KASAN_GENERIC=y
 # EFI (Extensible Firmware Interface) Support
 #
 CONFIG_HAVE_EFI_PAYLOAD=y
+# CONFIG_EFI_PAYLOAD is not set
 CONFIG_HAVE_EFI_STUB=y
 # end of EFI (Extensible Firmware Interface) Support
 
@@ -402,6 +406,7 @@ CONFIG_CMD_PM_DOMAIN=y
 CONFIG_CMD_NVMEM=y
 # CONFIG_CMD_VARINFO is not set
 CONFIG_CMD_VERSION=y
+# CONFIG_CMD_BFETCH is not set
 # CONFIG_CMD_MMC is not set
 CONFIG_CMD_MMC_EXTCSD=y
 CONFIG_CMD_POLLER=y
@@ -436,6 +441,7 @@ CONFIG_CMD_UMOUNT=y
 #
 # Environment
 #
+# CONFIG_CMD_CREATENV is not set
 CONFIG_CMD_NV=y
 CONFIG_CMD_EXPORT=y
 # CONFIG_CMD_DEFAULTENV is not set
@@ -513,7 +519,6 @@ CONFIG_CMD_CLEAR=y
 CONFIG_CMD_ECHO=y
 CONFIG_CMD_ECHO_E=y
 CONFIG_CMD_EDIT=y
-# CONFIG_CMD_LOGIN is not set
 CONFIG_CMD_MENU=y
 CONFIG_CMD_MENU_MANAGEMENT=y
 CONFIG_CMD_MENUTREE=y
@@ -561,11 +566,17 @@ CONFIG_CMD_WD_DEFAULT_TIMOUT=0
 # end of Hardware manipulation
 
 #
+# Security
+#
+# CONFIG_CMD_BLOBGEN is not set
+# CONFIG_CMD_LOGIN is not set
+# end of Security
+
+#
 # Miscellaneous
 #
 # CONFIG_CMD_2048 is not set
 CONFIG_CMD_BAREBOX_UPDATE=y
-# CONFIG_CMD_BLOBGEN is not set
 CONFIG_CMD_FIRMWARELOAD=y
 # CONFIG_CMD_KALLSYMS is not set
 CONFIG_CMD_OF_COMPATIBLE=y
@@ -666,6 +677,7 @@ CONFIG_DRIVER_NET_FEC_IMX=y
 #
 # MII PHY device drivers
 #
+# CONFIG_ADIN_PHY is not set
 # CONFIG_AR8327N_PHY is not set
 # CONFIG_AT803X_PHY is not set
 # CONFIG_DAVICOM_PHY is not set
@@ -771,6 +783,7 @@ CONFIG_MTD_SPI_NOR_USE_4K_SECTORS=y
 # CONFIG_MTD_UBI is not set
 CONFIG_DISK=y
 CONFIG_DISK_WRITE=y
+# CONFIG_DM_BLK is not set
 
 #
 # drive types
@@ -829,6 +842,8 @@ CONFIG_MCI=y
 # --- Feature list ---
 #
 # CONFIG_MCI_TUNING is not set
+CONFIG_MCI_STARTUP_NONE=y
+# CONFIG_MCI_STARTUP_NONREMOVABLE is not set
 # CONFIG_MCI_STARTUP is not set
 CONFIG_MCI_INFO=y
 CONFIG_MCI_WRITE=y
@@ -851,6 +866,7 @@ CONFIG_MCI_IMX_ESDHC=y
 CONFIG_MCI_ARASAN=y
 CONFIG_MCI_AM654=y
 # CONFIG_MCI_SPI is not set
+# CONFIG_MMC_CADENCE_SDHCI is not set
 CONFIG_MCI_IMX_ESDHC_PBL=y
 CONFIG_HAVE_CLK=y
 CONFIG_CLKDEV_LOOKUP=y
@@ -986,6 +1002,11 @@ CONFIG_PINCTRL_SINGLE=y
 # end of Pin controllers
 
 CONFIG_NVMEM=y
+CONFIG_NVMEM_LAYOUTS=y
+
+#
+# Layout Types
+#
 # CONFIG_NVMEM_RMEM is not set
 # CONFIG_NVMEM_SNVS_LPGPR is not set
 CONFIG_IMX_OCOTP=y
@@ -993,6 +1014,7 @@ CONFIG_IMX_OCOTP=y
 # CONFIG_IMX_OCOTP_ELE is not set
 # CONFIG_EEPROM_93XX46 is not set
 CONFIG_NVMEM_ROCKCHIP_OTP=y
+# CONFIG_NVMEM_ATMEL_SHA204A is not set
 
 #
 # Bus devices
@@ -1016,6 +1038,7 @@ CONFIG_REGULATOR_RK808=y
 
 CONFIG_RESET_CONTROLLER=y
 CONFIG_RESET_IMX7=y
+# CONFIG_RESET_SOCFPGA32 is not set
 CONFIG_HW_HAS_PCI=y
 
 #
@@ -1198,60 +1221,22 @@ CONFIG_FS_FAT_LFN=y
 # end of Filesystem support
 
 #
-# Library routines
+# Security options
 #
-CONFIG_PARAMETER=y
-CONFIG_UNCOMPRESS=y
-CONFIG_ZLIB=y
-# CONFIG_BZLIB is not set
-# CONFIG_LZ4_DECOMPRESS is not set
-# CONFIG_ZSTD_DECOMPRESS is not set
-CONFIG_XZ_DECOMPRESS=y
-CONFIG_XZ_DEC_X86=y
-CONFIG_XZ_DEC_POWERPC=y
-CONFIG_XZ_DEC_IA64=y
-CONFIG_XZ_DEC_ARM=y
-CONFIG_XZ_DEC_ARMTHUMB=y
-CONFIG_XZ_DEC_SPARC=y
-CONFIG_XZ_DEC_ARM64=y
-# CONFIG_BASE64 is not set
-CONFIG_GENERIC_FIND_NEXT_BIT=y
-CONFIG_PROCESS_ESCAPE_SEQUENCE=y
-CONFIG_LZO_DECOMPRESS=y
-CONFIG_FNMATCH=y
-CONFIG_QSORT=y
-CONFIG_IMAGE_SPARSE=y
-CONFIG_FIP=y
-CONFIG_LIBFDT=y
-# CONFIG_RATP is not set
-# CONFIG_ALLOW_PRNG_FALLBACK is not set
-CONFIG_CRC_CCITT=y
-# CONFIG_CRC8 is not set
-
-#
-# Library gui routines
-#
-# end of Library gui routines
-
-CONFIG_PRINTF_UUID=y
-CONFIG_NLS=y
+CONFIG_INSECURE=y
+# CONFIG_SECURITY_POLICY is not set
+# CONFIG_PASSWORD is not set
+# CONFIG_CRYPTO_KEYSTORE is not set
 # CONFIG_BLOBGEN is not set
-# end of Library routines
+
+#
+# OP-TEE loading
+#
+# CONFIG_PBL_OPTEE is not set
+# end of OP-TEE loading
 
 #
 # Hardening options
-#
-
-#
-# This barebox configuration has CONFIG_HAS_INSECURE_DEFAULTS=y indicating
-#
-
-#
-# that some of the configured options have potentially insecure defaults.
-#
-
-#
-# Extra care needs to be taken in secure booted systems.
 #
 # CONFIG_BUG_ON_DATA_CORRUPTION is not set
 
@@ -1281,6 +1266,21 @@ CONFIG_PBL_STACKPROTECTOR_NONE=y
 # end of Buffer overflow protection
 # end of Hardening options
 
+CONFIG_HAS_INSECURE_DEFAULTS=y
+
+#
+# This barebox configuration has CONFIG_HAS_INSECURE_DEFAULTS=y indicating
+#
+
+#
+# that some of the configured options have potentially insecure defaults.
+#
+
+#
+# Extra care needs to be taken in secure booted systems.
+#
+# end of Security options
+
 #
 # Crypto support
 #
@@ -1305,8 +1305,48 @@ CONFIG_DIGEST_SHA256_ARM64_CE=y
 # CONFIG_CRYPTO_RSA is not set
 # CONFIG_CRYPTO_ECDSA is not set
 # CONFIG_CRYPTO_BUILTIN_KEYS is not set
-# CONFIG_CRYPTO_KEYSTORE is not set
 # end of Crypto support
+
+#
+# Library routines
+#
+CONFIG_PARAMETER=y
+CONFIG_UNCOMPRESS=y
+CONFIG_ZLIB=y
+# CONFIG_BZLIB is not set
+# CONFIG_LZ4_DECOMPRESS is not set
+# CONFIG_ZSTD_DECOMPRESS is not set
+CONFIG_XZ_DECOMPRESS=y
+CONFIG_XZ_DEC_X86=y
+CONFIG_XZ_DEC_POWERPC=y
+CONFIG_XZ_DEC_IA64=y
+CONFIG_XZ_DEC_ARM=y
+CONFIG_XZ_DEC_ARMTHUMB=y
+CONFIG_XZ_DEC_SPARC=y
+CONFIG_XZ_DEC_ARM64=y
+# CONFIG_BASE64 is not set
+CONFIG_GENERIC_FIND_NEXT_BIT=y
+CONFIG_PROCESS_ESCAPE_SEQUENCE=y
+CONFIG_LZO_DECOMPRESS=y
+CONFIG_FNMATCH=y
+CONFIG_QSORT=y
+CONFIG_IMAGE_SPARSE=y
+CONFIG_FIP=y
+CONFIG_LIBFDT=y
+# CONFIG_RATP is not set
+# CONFIG_ALLOW_PRNG_FALLBACK is not set
+CONFIG_CRC_CCITT=y
+# CONFIG_CRC8 is not set
+# CONFIG_CRC16 is not set
+
+#
+# Library gui routines
+#
+# end of Library gui routines
+
+CONFIG_PRINTF_UUID=y
+CONFIG_NLS=y
+# end of Library routines
 
 #
 # Firmware files
