v8a: barebox-r5: clean up recipe
The recipe uses variables from another recipe, so depend on that and
make sure that the variables are only expanded on use (= instead of :=)
after all recipes have been included and the dependant variables have
been defined.  While we're at it, adjust the variable definitions
consistently.

Since barebox-r5 uses the same source tarball and patch stack as
barebox, also inherit its license.

Signed-off-by: Roland Hieber <rhi@pengutronix.de>

--- a/configs/platform-v8a/platforms/barebox-r5.in
+++ b/configs/platform-v8a/platforms/barebox-r5.in
@@ -3,6 +3,7 @@
 config BAREBOX_R5
 	tristate
 	prompt "Barebox (r5)"
+	select BAREBOX			if BUILDTIME
 	select HOST_SYSTEM_PYTHON3
 	select HOST_SYSTEM_PYTHON3_PYYAML
 	select FIRMWARE_TI
