v7a: at91bootstrap: version bump 4.0.6-rc1 -> 4.0.12
The old version no longer builds with GCC 15 (probably due to -Wall, but
the exact reason was not tested). Update to the current version, and run
'oldconfig' with default values on the config file.

Signed-off-by: Roland Hieber <rhi@pengutronix.de>

--- a/configs/platform-v7a/at91bootstrap-wifx-l1.config
+++ b/configs/platform-v7a/at91bootstrap-wifx-l1.config
@@ -5,6 +5,7 @@ CONFIG_HAVE_DOT_CONFIG=y
 CONFIG_LOAD_AND_JUMP=y
 # CONFIG_DIRECT_JUMP is not set
 # CONFIG_INIT_AND_STOP is not set
+# CONFIG_LOAD_AND_STOP is not set
 CONFIG_LOAD_SW=y
 CONFIG_JUMP_TO_SW=y
 # CONFIG_SAM9X60 is not set
@@ -13,6 +14,7 @@ CONFIG_JUMP_TO_SW=y
 # CONFIG_SAMA5D3X is not set
 CONFIG_SAMA5D4=y
 # CONFIG_SAMA7G5 is not set
+# CONFIG_SAMA7D65 is not set
 CONFIG_DEVICENAME="sama5d4"
 
 #
@@ -139,6 +141,7 @@ CONFIG_CPU_HAS_AES=y
 # CONFIG_CPU_HAS_FLEXCOM12 is not set
 # CONFIG_CPU_HAS_WDT2 is not set
 # CONFIG_CPU_HAS_DWDT is not set
+# CONFIG_CPU_HAS_XDMAC is not set
 
 #
 # DRAM
@@ -169,6 +172,7 @@ CONFIG_DBW_16=y
 # CONFIG_DDR_1_GBIT is not set
 CONFIG_DDR_2_GBIT=y
 # CONFIG_DDR_4_GBIT is not set
+# CONFIG_DDR_6_GBIT is not set
 # CONFIG_DDR_8_GBIT is not set
 # CONFIG_CAS_2 is not set
 CONFIG_CAS_3=y
@@ -223,12 +227,21 @@ CONFIG_FATFS=y
 CONFIG_ALLOW_BOOT_FROM_DATAFLASH_CS0=y
 CONFIG_BOOTSTRAP_MAXSIZE="65536"
 CONFIG_PROJECT="sdcard"
+# CONFIG_LOAD_OPTEE is not set
 CONFIG_LOAD_UBOOT=y
 # CONFIG_LOAD_LINUX is not set
 # CONFIG_LOAD_ANDROID is not set
 # CONFIG_LOAD_1MB is not set
 # CONFIG_LOAD_4MB is not set
 # CONFIG_LOAD_64KB is not set
+
+#
+# ARM TrustZone Options
+#
+CONFIG_MATRIX=y
+# CONFIG_ENTER_NWD is not set
+CONFIG_REDIRECT_ALL_INTS_AIC=y
+# CONFIG_TZC400 is not set
 CONFIG_JUMP_ADDR="0x26F00000"
 
 #
@@ -239,15 +252,6 @@ CONFIG_MACH_TYPE="9999"
 # CONFIG_OVERRIDE_MACH_TYPE is not set
 # CONFIG_SECURE is not set
 CONFIG_DISABLE_WATCHDOG=y
-
-#
-# ARM TrustZone Options
-#
-CONFIG_MATRIX=y
-# CONFIG_LOAD_OPTEE is not set
-# CONFIG_ENTER_NWD is not set
-CONFIG_REDIRECT_ALL_INTS_AIC=y
-# CONFIG_TZC400 is not set
 # CONFIG_PM is not set
 # CONFIG_BACKUP_MODE is not set
 
@@ -260,11 +264,13 @@ CONFIG_BOARD_QUIRK_NONE=y
 # CONFIG_BOARD_QUIRK_SAMA5D2_XULT is not set
 # CONFIG_BOARD_QUIRK_SAMA5D2_ICP is not set
 # CONFIG_BOARD_QUIRK_SAMA5D2_SIP is not set
+# CONFIG_BOARD_QUIRK_SAM9X60_CURIOSITY is not set
 # CONFIG_BOARD_QUIRK_SAM9X60_EK is not set
 # CONFIG_BOARD_QUIRK_SAM9X60_EB is not set
 # CONFIG_BOARD_QUIRK_SAMA7G5_EK is not set
-# CONFIG_BOARD_QUIRK_SAM9X60_CURIOSITY is not set
+# CONFIG_BOARD_QUIRK_OURASI_DDR3_EB is not set
 # CONFIG_BOARD_QUIRK_SAM9X75_EB is not set
+# CONFIG_BOARD_QUIRK_SAM9X75_CURIOSITY is not set
 # CONFIG_LED_ON_BOARD is not set
 
 #
