v7a: kernel: use 8250-based serial driver for OMAP
v6.18-rc1 introduced commit ca8be8fc2c ("ARM: dts: am33xx-l4: fix UART
compatible"), which changed the compatible for the serial device nodes
to satisfy a binding checker warning.

Prior to that commit, there were two drivers that matched the UART
on the AM335x, but now there is only one and it's not the one we had
enabled in our kernel config.

Enable the 8250 UART driver and disable the old one we no longer use.
As this changes the name of the UART devices from /dev/ttyO to /dev/ttyS
by default (unless the CONFIG_SERIAL_8250_OMAP_TTYO_FIXUP compatibility
option is enabled), we also enable CONFIG_DRIVER_SERIAL_NS16550_OMAP_TTYS
in barebox, so the correct TTY device is fixed up.

Reported-by: Michael Olbrich <mol@pengutronix.de>
Signed-off-by: Ahmad Fatoum <a.fatoum@pengutronix.de>

--- a/configs/platform-v7a/barebox.config
+++ b/configs/platform-v7a/barebox.config
@@ -720,7 +720,7 @@ CONFIG_SERIAL_AMBA_PL011=y
 CONFIG_DRIVER_SERIAL_IMX=y
 CONFIG_DRIVER_SERIAL_STM32=y
 CONFIG_DRIVER_SERIAL_NS16550=y
-# CONFIG_DRIVER_SERIAL_NS16550_OMAP_TTYS is not set
+CONFIG_DRIVER_SERIAL_NS16550_OMAP_TTYS=y
 # CONFIG_DRIVER_SERIAL_CADENCE is not set
 # CONFIG_DRIVER_SERIAL_LPUART32 is not set
 # CONFIG_SERIAL_SIFIVE is not set
