--- a/configs/platform-v7a/barebox-am335x-mlo.config
+++ b/configs/platform-v7a/barebox-am335x-mlo.config
@@ -246,7 +246,7 @@ CONFIG_OF_GPIO=y
 # CONFIG_SERIAL_DEV_BUS is not set
 # CONFIG_DRIVER_SERIAL_ARM_DCC is not set
 CONFIG_DRIVER_SERIAL_NS16550=y
-# CONFIG_DRIVER_SERIAL_NS16550_OMAP_TTYS is not set
+CONFIG_DRIVER_SERIAL_NS16550_OMAP_TTYS=y
 # CONFIG_DRIVER_SERIAL_CADENCE is not set
 # CONFIG_SERIAL_SIFIVE is not set
 # end of serial drivers
