v8a: images: beagleplay: unify whitespace in genimage.config
The rest of the file uses spaces, so remove the stray tabs.

Signed-off-by: Ahmad Fatoum <a.fatoum@pengutronix.de>

--- a/configs/platform-v8a/config/images/image-beagleplay.config
+++ b/configs/platform-v8a/config/images/image-beagleplay.config
@@ -11,18 +11,18 @@ image @IMAGE@ {
         bootable = true
     }
 
-	partition barebox-environment {
-		partition-type-uuid = barebox-env
-		image = barebox-default-environment
-		size = 1M
-		image = "/dev/zero"
-	}
+    partition barebox-environment {
+        partition-type-uuid = barebox-env
+        image = barebox-default-environment
+        size = 1M
+        image = "/dev/null"
+    }
 
-	partition barebox-state {
-		partition-type-uuid = barebox-state
-		size = 1M
-		image = "/dev/zero"
-	}
+    partition barebox-state {
+        partition-type-uuid = barebox-state
+        size = 1M
+        image = "/dev/null"
+    }
 
     partition root-A {
         image = @IMAGE@.root.ext4
